a_misc/a_misc_research/m_z/virtualization/iaas/microstack/inspection-report/iptables.log
# Generated by iptables-save v1.8.6 on Tue May 20 17:02:14 2025
*raw
:PREROUTING ACCEPT [148319935:565210903309]
:OUTPUT ACCEPT [151394536:586925567295]
:CILIUM_OUTPUT_raw - [0:0]
:CILIUM_PRE_raw - [0:0]
-A PREROUTING -m comment --comment "cilium-feeder: CILIUM_PRE_raw" -j CILIUM_PRE_raw
-A OUTPUT -m comment --comment "cilium-feeder: CILIUM_OUTPUT_raw" -j CILIUM_OUTPUT_raw
-A CILIUM_OUTPUT_raw -o lxc+ -m mark --mark 0xa00/0xfffffeff -m comment --comment "cilium: NOTRACK for proxy return traffic" -j CT --notrack
-A CILIUM_OUTPUT_raw -o cilium_host -m mark --mark 0xa00/0xfffffeff -m comment --comment "cilium: NOTRACK for proxy return traffic" -j CT --notrack
-A CILIUM_OUTPUT_raw -o lxc+ -m mark --mark 0x800/0xe00 -m comment --comment "cilium: NOTRACK for L7 proxy upstream traffic" -j CT --notrack
-A CILIUM_OUTPUT_raw -o cilium_host -m mark --mark 0x800/0xe00 -m comment --comment "cilium: NOTRACK for L7 proxy upstream traffic" -j CT --notrack
-A CILIUM_PRE_raw -m mark --mark 0x200/0xf00 -m comment --comment "cilium: NOTRACK for proxy traffic" -j CT --notrack
COMMIT
# Completed on Tue May 20 17:02:14 2025
# Generated by iptables-save v1.8.6 on Tue May 20 17:02:14 2025
*nat
:PREROUTING ACCEPT [1552:94403]
:INPUT ACCEPT [865:56249]
:OUTPUT ACCEPT [21056:1279957]
:POSTROUTING ACCEPT [21048:1278381]
:CILIUM_OUTPUT_nat - [0:0]
:CILIUM_POST_nat - [0:0]
:CILIUM_PRE_nat - [0:0]
:KUBE-EXT-2GHBFEQ4WUOEGD4J - [0:0]
:KUBE-EXT-4CEW3KAYVEBDHARI - [0:0]
:KUBE-EXT-GKBUMSO5ZDY7DGMM - [0:0]
:KUBE-EXT-KA4JXI62FCBBOWNM - [0:0]
:KUBE-EXT-NDKHTIKW26ZIMAD4 - [0:0]
:KUBE-EXT-QSZEUE2LHPQKOWY3 - [0:0]
:KUBE-EXT-RK5GH6LB2OL25CKL - [0:0]
:KUBE-EXT-S5XBNUBUDJVDMWVM - [0:0]
:KUBE-KUBELET-CANARY - [0:0]
:KUBE-MARK-MASQ - [0:0]
:KUBE-NODEPORTS - [0:0]
:KUBE-POSTROUTING - [0:0]
:KUBE-PROXY-CANARY - [0:0]
:KUBE-SEP-24YXE2BZQ2BBN2FZ - [0:0]
:KUBE-SEP-2OFW2GHOBYXNS6VZ - [0:0]
:KUBE-SEP-2SC6BGSVF5JOHBKD - [0:0]
:KUBE-SEP-36PV3PHFCRL6SNCF - [0:0]
:KUBE-SEP-3SEAFEEIKP4O4LAJ - [0:0]
:KUBE-SEP-3YEFNB4P6WVUVEP7 - [0:0]
:KUBE-SEP-5IDQ77SG7PDP37FR - [0:0]
:KUBE-SEP-5LPMEFCX3Z45S4A3 - [0:0]
:KUBE-SEP-5OCBBV4XPDVX7PNJ - [0:0]
:KUBE-SEP-672ZTEWJCOZPJJ7C - [0:0]
:KUBE-SEP-6A5LWEYXU2QKV4OB - [0:0]
:KUBE-SEP-6CTTAFEROA2NJ6CZ - [0:0]
:KUBE-SEP-6XGJOPOBWR5IYMWB - [0:0]
:KUBE-SEP-75TMVCDBRKSIR6T3 - [0:0]
:KUBE-SEP-7PZZ6FCNYKVAIFBD - [0:0]
:KUBE-SEP-A6QVXX3URX7CNMRS - [0:0]
:KUBE-SEP-AMOHLMHY6HW25FKG - [0:0]
:KUBE-SEP-AP2WKIULSWO3MQQA - [0:0]
:KUBE-SEP-AQDLFJXB2R7JVJQF - [0:0]
:KUBE-SEP-ARFYFUPJEFOYQVSE - [0:0]
:KUBE-SEP-BGKMRL7IVAS3H565 - [0:0]
:KUBE-SEP-CDKIGN3GWJCN6T35 - [0:0]
:KUBE-SEP-D5L6GTH3N5F4PQCH - [0:0]
:KUBE-SEP-EXCUFREH2C7GAT2J - [0:0]
:KUBE-SEP-EY5I2MRWHJXPITWC - [0:0]
:KUBE-SEP-F4BDB75HTLW4UPRF - [0:0]
:KUBE-SEP-F6KTWIOJ3EUOO5GY - [0:0]
:KUBE-SEP-F7UQCUP4UCRNCYOK - [0:0]
:KUBE-SEP-FGUJ4FZGBXMCMHRU - [0:0]
:KUBE-SEP-FHJ5ZGDXT4LU2S4G - [0:0]
:KUBE-SEP-FQIHC6XI2VSLUFCX - [0:0]
:KUBE-SEP-FTX5SKQIM3TK2IJF - [0:0]
:KUBE-SEP-GGDJKKWRWNVSKGE2 - [0:0]
:KUBE-SEP-GPOMYCHACVSM5COC - [0:0]
:KUBE-SEP-GRZLUWUEOTG4U5JP - [0:0]
:KUBE-SEP-GUU3QKVADYVZGFFV - [0:0]
:KUBE-SEP-GZM3DAJ3VA4LMPWJ - [0:0]
:KUBE-SEP-H674HG7TKNZH66OW - [0:0]
:KUBE-SEP-HABABXNWBMPDE2H6 - [0:0]
:KUBE-SEP-HEQQF4F7YYMGLH5L - [0:0]
:KUBE-SEP-IF7FHM2KI3KQTIWQ - [0:0]
:KUBE-SEP-ISSNFAEUDFWZOC7N - [0:0]
:KUBE-SEP-J47LYGYP5XY66LU7 - [0:0]
:KUBE-SEP-JMCOK6N56XS4O46D - [0:0]
:KUBE-SEP-KHCQNPW7AOKMV4SW - [0:0]
:KUBE-SEP-KHVEECHUKRNTKR5X - [0:0]
:KUBE-SEP-KYSUGISJCYD3PVJ2 - [0:0]
:KUBE-SEP-L5TDKKW4CKBWMAHJ - [0:0]
:KUBE-SEP-LBHMEUYII5HR3XNI - [0:0]
:KUBE-SEP-LRH7MKSMNLZWGPWM - [0:0]
:KUBE-SEP-MJC6UFVYCFUNH63G - [0:0]
:KUBE-SEP-N2TKMWWQJX647RRE - [0:0]
:KUBE-SEP-O4MLS572VP7OYHNV - [0:0]
:KUBE-SEP-OVBBYVOXVZKCGM25 - [0:0]
:KUBE-SEP-P4NRQAIO5OIH7MVF - [0:0]
:KUBE-SEP-P5MKNOXXZ6V2T3AF - [0:0]
:KUBE-SEP-P6U676ZGRAS57GNT - [0:0]
:KUBE-SEP-QDV3I7MF2AYO3MBG - [0:0]
:KUBE-SEP-QS2RTFBHUNPGTER5 - [0:0]
:KUBE-SEP-QWNV3K7IVYWQC5IO - [0:0]
:KUBE-SEP-R2ZWJESPBZMJ6JUG - [0:0]
:KUBE-SEP-RGQQWGB2WG3ZBIGD - [0:0]
:KUBE-SEP-SCVEBFNA7EKFE5GS - [0:0]
:KUBE-SEP-SJMFRPMOSDNZM5XX - [0:0]
:KUBE-SEP-SVHQJMEQLTJVQUZ2 - [0:0]
:KUBE-SEP-TFTXI4ROQR7EVWYH - [0:0]
:KUBE-SEP-TZGRWS6KFX2KMZXY - [0:0]
:KUBE-SEP-U5PUQT5PPRUZO6ES - [0:0]
:KUBE-SEP-UEMDLHBGWG2CP4WK - [0:0]
:KUBE-SEP-UFDECIK27A4P66BD - [0:0]
:KUBE-SEP-UHULVY5HJBN4FJH7 - [0:0]
:KUBE-SEP-UYVRZEQ5KTEQ3ONY - [0:0]
:KUBE-SEP-UZDBYQ3R22BIBKDO - [0:0]
:KUBE-SEP-VHUU3CUIAERUIBS5 - [0:0]
:KUBE-SEP-VU3QEMS4JVVZQODS - [0:0]
:KUBE-SEP-W322LC6RDXMTYWQT - [0:0]
:KUBE-SEP-W5XQ64GWYVOGXLMI - [0:0]
:KUBE-SEP-WBG4P27KSP5SCXNX - [0:0]
:KUBE-SEP-WLEVCVLV3TBBOYV7 - [0:0]
:KUBE-SEP-WQAE37XJYVJRA4VH - [0:0]
:KUBE-SEP-WQWA44BHLTSNWXT2 - [0:0]
:KUBE-SEP-WZ6JHAPWWZKOVDDI - [0:0]
:KUBE-SEP-X3IMBMTXGSLNWPB5 - [0:0]
:KUBE-SEP-X4TWTRR3AZXA7XTQ - [0:0]
:KUBE-SEP-XH7VETVDLJL4HU6Y - [0:0]
:KUBE-SEP-XJX73PRF2NCB343X - [0:0]
:KUBE-SEP-XL6PVUU23ARINBGK - [0:0]
:KUBE-SEP-XTV56QAQBUME6KWU - [0:0]
:KUBE-SEP-YZQAWCQ6PRHSOG2R - [0:0]
:KUBE-SERVICES - [0:0]
:KUBE-SVC-25BGXZHPZLAFXBHH - [0:0]
:KUBE-SVC-2GHBFEQ4WUOEGD4J - [0:0]
:KUBE-SVC-3HRKMZB4P4MFJF2L - [0:0]
:KUBE-SVC-4CEW3KAYVEBDHARI - [0:0]
:KUBE-SVC-4HLXV62L3OSLK2CU - [0:0]
:KUBE-SVC-4IIQZXW2ZE4J2DMX - [0:0]
:KUBE-SVC-4PGFOIU5ZTKHV6HD - [0:0]
:KUBE-SVC-5DFXTPSQT27A6GON - [0:0]
:KUBE-SVC-5HFU74LCVK2NGTJ6 - [0:0]
:KUBE-SVC-5IGJHCC5K33X6JB4 - [0:0]
:KUBE-SVC-5MS7UA2EH5LXQS3R - [0:0]
:KUBE-SVC-5OJMLWIU3ZRYIDL4 - [0:0]
:KUBE-SVC-66XFSLUND2K6O7D7 - [0:0]
:KUBE-SVC-6CPLJQD7PSGKEZEM - [0:0]
:KUBE-SVC-6HT62HI2DHYOGE2D - [0:0]
:KUBE-SVC-6W2KODAMISSIISVW - [0:0]
:KUBE-SVC-7EQ25GQUT7F6XR24 - [0:0]
:KUBE-SVC-7SIYKFBUK6PWTI3U - [0:0]
:KUBE-SVC-AIE77B74XSMQBHZS - [0:0]
:KUBE-SVC-AR5EATNVJMRTK4UN - [0:0]
:KUBE-SVC-AYNH6PUVJF3OV3BH - [0:0]
:KUBE-SVC-C7E7VPVTVPTHKS4T - [0:0]
:KUBE-SVC-CARWDOT4HKMPWEIJ - [0:0]
:KUBE-SVC-CK3MJ7V6E6L466FX - [0:0]
:KUBE-SVC-CKWNKTHLBAY2KY5R - [0:0]
:KUBE-SVC-DHAKWN7N5WBBRJVA - [0:0]
:KUBE-SVC-DQ5YLQGNPI2N5PR5 - [0:0]
:KUBE-SVC-EC7NGPDWZVI62YFY - [0:0]
:KUBE-SVC-FC7Q4PM2XPHNGY3Z - [0:0]
:KUBE-SVC-FLB2BORMZWZ53IKE - [0:0]
:KUBE-SVC-FNEG4Q2YHANSNYKH - [0:0]
:KUBE-SVC-FVC6YTQWAJEBYUAB - [0:0]
:KUBE-SVC-GKBUMSO5ZDY7DGMM - [0:0]
:KUBE-SVC-GZ25SP4UFGF7SAVL - [0:0]
:KUBE-SVC-H2N4QTWNT37REUZF - [0:0]
:KUBE-SVC-HBSZUQSSSKZ2DX2W - [0:0]
:KUBE-SVC-HFO6PGS3TBRMKKTO - [0:0]
:KUBE-SVC-HIAST7RNRGUK7QM6 - [0:0]
:KUBE-SVC-I34V4KD4D3MMHP5H - [0:0]
:KUBE-SVC-IDBTIWXF2KSQYTVB - [0:0]
:KUBE-SVC-IPF63AGY3JJ3PHNR - [0:0]
:KUBE-SVC-J3T3F7QHMRKAJCWA - [0:0]
:KUBE-SVC-KA4JXI62FCBBOWNM - [0:0]
:KUBE-SVC-KGMEH26DXNEYNQH5 - [0:0]
:KUBE-SVC-KPB6FCOD7LTIJ44L - [0:0]
:KUBE-SVC-KSSVZVUZLU66I6II - [0:0]
:KUBE-SVC-N5FN5Z63AEU4YRHS - [0:0]
:KUBE-SVC-NBUZLUPLYBOL4XV2 - [0:0]
:KUBE-SVC-NDKHTIKW26ZIMAD4 - [0:0]
:KUBE-SVC-NFW7O3U2KREULMFM - [0:0]
:KUBE-SVC-NPX46M4PTMTKRN6Y - [0:0]
:KUBE-SVC-NR7UDE62IINWMF5S - [0:0]
:KUBE-SVC-O7BJYTUOHY7SPRGC - [0:0]
:KUBE-SVC-OH6GR75JNR5V6AQ5 - [0:0]
:KUBE-SVC-OWU5PCOHLV4TUVBY - [0:0]
:KUBE-SVC-PTVCZ3VAX7G3RD3W - [0:0]
:KUBE-SVC-PYAS3EZXAAJLKJM2 - [0:0]
:KUBE-SVC-QSZEUE2LHPQKOWY3 - [0:0]
:KUBE-SVC-QYT45U6IUOVTR7GR - [0:0]
:KUBE-SVC-R2DNFYQWSUYN4HZ5 - [0:0]
:KUBE-SVC-RK5GH6LB2OL25CKL - [0:0]
:KUBE-SVC-S3UST2XMIBA7FREH - [0:0]
:KUBE-SVC-S5XBNUBUDJVDMWVM - [0:0]
:KUBE-SVC-S6AUUPURCZ7AAWMA - [0:0]
:KUBE-SVC-SJNPEF2FGSI2RDWV - [0:0]
:KUBE-SVC-T2A5XX4GG2DS67LO - [0:0]
:KUBE-SVC-TMO2M4BFCDHJDPZC - [0:0]
:KUBE-SVC-TWKSNJRZYL5OW6JB - [0:0]
:KUBE-SVC-UE4IWHDBZ4KSDIKK - [0:0]
:KUBE-SVC-UUFXHO3P5GE6FM2A - [0:0]
:KUBE-SVC-V5366VPRH7XNBMX4 - [0:0]
:KUBE-SVC-VCVY7LAENSPKSDW3 - [0:0]
:KUBE-SVC-VEHAYQGNYRE4RE3R - [0:0]
:KUBE-SVC-VHXZV2MWLNZKUNRE - [0:0]
:KUBE-SVC-VJCU6USTTMCOF35P - [0:0]
:KUBE-SVC-VSPETNIDFFNUMMLP - [0:0]
:KUBE-SVC-W6CZGP33LLP5NNXR - [0:0]
:KUBE-SVC-W7FAHUBBL5ZDPENZ - [0:0]
:KUBE-SVC-WWJGWTRY3BPQWFPG - [0:0]
:KUBE-SVC-X3OSFPMHGAZQ2YBE - [0:0]
:KUBE-SVC-XCH4QPFYCNPMWMXP - [0:0]
:KUBE-SVC-XHHZHCOSUHOWDZQT - [0:0]
:KUBE-SVC-XHOWG2P2MJQGSNKR - [0:0]
:KUBE-SVC-XXMU3DECOG5ENS45 - [0:0]
:KUBE-SVC-Z4ANX4WAEWEBLCTM - [0:0]
:KUBE-SVC-Z7Z7TFWQ7C3HKWH5 - [0:0]
:KUBE-SVC-ZNSDVCZ2K3R5JXU3 - [0:0]
:KUBE-SVC-ZZM3V76CVXV5HBWS - [0:0]
:KUBE-SVL-NZTS37XDTDNXGCKJ - [0:0]
-A PREROUTING -m comment --comment "cilium-feeder: CILIUM_PRE_nat" -j CILIUM_PRE_nat
-A PREROUTING -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A OUTPUT -m comment --comment "cilium-feeder: CILIUM_OUTPUT_nat" -j CILIUM_OUTPUT_nat
-A OUTPUT -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A POSTROUTING -m comment --comment "cilium-feeder: CILIUM_POST_nat" -j CILIUM_POST_nat
-A POSTROUTING -m comment --comment "kubernetes postrouting rules" -j KUBE-POSTROUTING
-A POSTROUTING -s 10.20.20.0/24 -m comment --comment "openstack-hypervisor external network rule" -j MASQUERADE
-A POSTROUTING -s 172.16.2.0/24 -m comment --comment "openstack-hypervisor external network rule" -j MASQUERADE
-A CILIUM_POST_nat -s 10.1.0.0/24 ! -d 10.1.0.0/24 ! -o cilium_+ -m comment --comment "cilium masquerade non-cluster" -j MASQUERADE
-A CILIUM_POST_nat -m mark --mark 0xa00/0xe00 -m comment --comment "exclude proxy return traffic from masquerade" -j ACCEPT
-A CILIUM_POST_nat ! -s 10.1.0.0/24 ! -d 10.1.0.0/24 -o cilium_host -m comment --comment "cilium host->cluster masquerade" -j SNAT --to-source 10.1.0.56
-A CILIUM_POST_nat -s 127.0.0.1/32 -o cilium_host -m comment --comment "cilium host->cluster from 127.0.0.1 masquerade" -j SNAT --to-source 10.1.0.56
-A CILIUM_POST_nat -o cilium_host -m mark --mark 0xf00/0xf00 -m conntrack --ctstate DNAT -m comment --comment "hairpin traffic that originated from a local pod" -j SNAT --to-source 10.1.0.56
-A KUBE-EXT-2GHBFEQ4WUOEGD4J -m comment --comment "masquerade traffic for controller-sunbeam-controller/controller-service:api-server external destinations" -j KUBE-MARK-MASQ
-A KUBE-EXT-2GHBFEQ4WUOEGD4J -j KUBE-SVC-2GHBFEQ4WUOEGD4J
-A KUBE-EXT-4CEW3KAYVEBDHARI -m comment --comment "masquerade traffic for openstack/rabbitmq-lb:amqp external destinations" -j KUBE-MARK-MASQ
-A KUBE-EXT-4CEW3KAYVEBDHARI -j KUBE-SVC-4CEW3KAYVEBDHARI
-A KUBE-EXT-GKBUMSO5ZDY7DGMM -m comment --comment "masquerade traffic for openstack/rabbitmq-lb:management external destinations" -j KUBE-MARK-MASQ
-A KUBE-EXT-GKBUMSO5ZDY7DGMM -j KUBE-SVC-GKBUMSO5ZDY7DGMM
-A KUBE-EXT-KA4JXI62FCBBOWNM -m comment --comment "masquerade traffic for openstack/ovn-relay-lb:southbound external destinations" -j KUBE-MARK-MASQ
-A KUBE-EXT-KA4JXI62FCBBOWNM -j KUBE-SVC-KA4JXI62FCBBOWNM
-A KUBE-EXT-NDKHTIKW26ZIMAD4 -m comment --comment "masquerade traffic for openstack/traefik-public-lb:traefik external destinations" -j KUBE-MARK-MASQ
-A KUBE-EXT-NDKHTIKW26ZIMAD4 -j KUBE-SVC-NDKHTIKW26ZIMAD4
-A KUBE-EXT-QSZEUE2LHPQKOWY3 -m comment --comment "masquerade traffic for openstack/traefik-lb:traefik external destinations" -j KUBE-MARK-MASQ
-A KUBE-EXT-QSZEUE2LHPQKOWY3 -j KUBE-SVC-QSZEUE2LHPQKOWY3
-A KUBE-EXT-RK5GH6LB2OL25CKL -m comment --comment "masquerade traffic for openstack/traefik-lb:traefik-tls external destinations" -j KUBE-MARK-MASQ
-A KUBE-EXT-RK5GH6LB2OL25CKL -j KUBE-SVC-RK5GH6LB2OL25CKL
-A KUBE-EXT-S5XBNUBUDJVDMWVM -m comment --comment "masquerade traffic for openstack/traefik-public-lb:traefik-tls external destinations" -j KUBE-MARK-MASQ
-A KUBE-EXT-S5XBNUBUDJVDMWVM -j KUBE-SVC-S5XBNUBUDJVDMWVM
-A KUBE-MARK-MASQ -j MARK --set-xmark 0x4000/0x4000
-A KUBE-NODEPORTS -d 127.0.0.0/8 -p tcp -m comment --comment "openstack/ovn-relay-lb:southbound" -m tcp --dport 31511 -m nfacct --nfacct-name  localhost_nps_accepted_pkts -j KUBE-EXT-KA4JXI62FCBBOWNM
-A KUBE-NODEPORTS -p tcp -m comment --comment "openstack/ovn-relay-lb:southbound" -m tcp --dport 31511 -j KUBE-EXT-KA4JXI62FCBBOWNM
-A KUBE-NODEPORTS -d 127.0.0.0/8 -p tcp -m comment --comment "openstack/rabbitmq-lb:amqp" -m tcp --dport 32230 -m nfacct --nfacct-name  localhost_nps_accepted_pkts -j KUBE-EXT-4CEW3KAYVEBDHARI
-A KUBE-NODEPORTS -p tcp -m comment --comment "openstack/rabbitmq-lb:amqp" -m tcp --dport 32230 -j KUBE-EXT-4CEW3KAYVEBDHARI
-A KUBE-NODEPORTS -d 127.0.0.0/8 -p tcp -m comment --comment "openstack/traefik-lb:traefik" -m tcp --dport 30903 -m nfacct --nfacct-name  localhost_nps_accepted_pkts -j KUBE-EXT-QSZEUE2LHPQKOWY3
-A KUBE-NODEPORTS -p tcp -m comment --comment "openstack/traefik-lb:traefik" -m tcp --dport 30903 -j KUBE-EXT-QSZEUE2LHPQKOWY3
-A KUBE-NODEPORTS -d 127.0.0.0/8 -p tcp -m comment --comment "controller-sunbeam-controller/controller-service:api-server" -m tcp --dport 31753 -m nfacct --nfacct-name  localhost_nps_accepted_pkts -j KUBE-EXT-2GHBFEQ4WUOEGD4J
-A KUBE-NODEPORTS -p tcp -m comment --comment "controller-sunbeam-controller/controller-service:api-server" -m tcp --dport 31753 -j KUBE-EXT-2GHBFEQ4WUOEGD4J
-A KUBE-NODEPORTS -d 127.0.0.0/8 -p tcp -m comment --comment "openstack/traefik-public-lb:traefik-tls" -m tcp --dport 31102 -m nfacct --nfacct-name  localhost_nps_accepted_pkts -j KUBE-EXT-S5XBNUBUDJVDMWVM
-A KUBE-NODEPORTS -p tcp -m comment --comment "openstack/traefik-public-lb:traefik-tls" -m tcp --dport 31102 -j KUBE-EXT-S5XBNUBUDJVDMWVM
-A KUBE-NODEPORTS -d 127.0.0.0/8 -p tcp -m comment --comment "openstack/traefik-lb:traefik-tls" -m tcp --dport 31610 -m nfacct --nfacct-name  localhost_nps_accepted_pkts -j KUBE-EXT-RK5GH6LB2OL25CKL
-A KUBE-NODEPORTS -p tcp -m comment --comment "openstack/traefik-lb:traefik-tls" -m tcp --dport 31610 -j KUBE-EXT-RK5GH6LB2OL25CKL
-A KUBE-NODEPORTS -d 127.0.0.0/8 -p tcp -m comment --comment "openstack/rabbitmq-lb:management" -m tcp --dport 31845 -m nfacct --nfacct-name  localhost_nps_accepted_pkts -j KUBE-EXT-GKBUMSO5ZDY7DGMM
-A KUBE-NODEPORTS -p tcp -m comment --comment "openstack/rabbitmq-lb:management" -m tcp --dport 31845 -j KUBE-EXT-GKBUMSO5ZDY7DGMM
-A KUBE-NODEPORTS -d 127.0.0.0/8 -p tcp -m comment --comment "openstack/traefik-public-lb:traefik" -m tcp --dport 32607 -m nfacct --nfacct-name  localhost_nps_accepted_pkts -j KUBE-EXT-NDKHTIKW26ZIMAD4
-A KUBE-NODEPORTS -p tcp -m comment --comment "openstack/traefik-public-lb:traefik" -m tcp --dport 32607 -j KUBE-EXT-NDKHTIKW26ZIMAD4
-A KUBE-POSTROUTING -m mark ! --mark 0x4000/0x4000 -j RETURN
-A KUBE-POSTROUTING -j MARK --set-xmark 0x4000/0x0
-A KUBE-POSTROUTING -m comment --comment "kubernetes service traffic requiring SNAT" -j MASQUERADE --random-fully
-A KUBE-SEP-24YXE2BZQ2BBN2FZ -s 10.1.0.87/32 -m comment --comment "openstack/glance-mysql-router:juju-6448-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-24YXE2BZQ2BBN2FZ -p tcp -m comment --comment "openstack/glance-mysql-router:juju-6448-tcp" -m tcp -j DNAT --to-destination 10.1.0.87:6448
-A KUBE-SEP-2OFW2GHOBYXNS6VZ -s 10.1.0.190/32 -m comment --comment "openstack/nova-cell-mysql-router:juju-6447-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-2OFW2GHOBYXNS6VZ -p tcp -m comment --comment "openstack/nova-cell-mysql-router:juju-6447-tcp" -m tcp -j DNAT --to-destination 10.1.0.190:6447
-A KUBE-SEP-2SC6BGSVF5JOHBKD -s 10.1.0.83/32 -m comment --comment "openstack/keystone:juju-5000-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-2SC6BGSVF5JOHBKD -p tcp -m comment --comment "openstack/keystone:juju-5000-tcp" -m tcp -j DNAT --to-destination 10.1.0.83:5000
-A KUBE-SEP-36PV3PHFCRL6SNCF -s 10.1.0.2/32 -m comment --comment "openstack/nova-api-mysql-router:juju-6448-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-36PV3PHFCRL6SNCF -p tcp -m comment --comment "openstack/nova-api-mysql-router:juju-6448-tcp" -m tcp -j DNAT --to-destination 10.1.0.2:6448
-A KUBE-SEP-3SEAFEEIKP4O4LAJ -s 10.1.0.74/32 -m comment --comment "openstack/cinder-mysql-router-service:mysql-ro" -j KUBE-MARK-MASQ
-A KUBE-SEP-3SEAFEEIKP4O4LAJ -p tcp -m comment --comment "openstack/cinder-mysql-router-service:mysql-ro" -m tcp -j DNAT --to-destination 10.1.0.74:6447
-A KUBE-SEP-3YEFNB4P6WVUVEP7 -s 10.1.0.243/32 -m comment --comment "controller-sunbeam-controller/modeloperator" -j KUBE-MARK-MASQ
-A KUBE-SEP-3YEFNB4P6WVUVEP7 -p tcp -m comment --comment "controller-sunbeam-controller/modeloperator" -m tcp -j DNAT --to-destination 10.1.0.243:17071
-A KUBE-SEP-5IDQ77SG7PDP37FR -s 10.1.0.110/32 -m comment --comment "kube-system/coredns:udp-53" -j KUBE-MARK-MASQ
-A KUBE-SEP-5IDQ77SG7PDP37FR -p udp -m comment --comment "kube-system/coredns:udp-53" -m udp -j DNAT --to-destination 10.1.0.110:53
-A KUBE-SEP-5LPMEFCX3Z45S4A3 -s 10.1.0.23/32 -m comment --comment "openstack/neutron-mysql-router:juju-6448-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-5LPMEFCX3Z45S4A3 -p tcp -m comment --comment "openstack/neutron-mysql-router:juju-6448-tcp" -m tcp -j DNAT --to-destination 10.1.0.23:6448
-A KUBE-SEP-5OCBBV4XPDVX7PNJ -s 10.1.0.2/32 -m comment --comment "openstack/nova-api-mysql-router:juju-6447-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-5OCBBV4XPDVX7PNJ -p tcp -m comment --comment "openstack/nova-api-mysql-router:juju-6447-tcp" -m tcp -j DNAT --to-destination 10.1.0.2:6447
-A KUBE-SEP-672ZTEWJCOZPJJ7C -s 10.1.0.24/32 -m comment --comment "openstack/keystone-mysql-router-service:mysql-rw" -j KUBE-MARK-MASQ
-A KUBE-SEP-672ZTEWJCOZPJJ7C -p tcp -m comment --comment "openstack/keystone-mysql-router-service:mysql-rw" -m tcp -j DNAT --to-destination 10.1.0.24:6446
-A KUBE-SEP-6A5LWEYXU2QKV4OB -s 10.1.0.87/32 -m comment --comment "openstack/glance-mysql-router-service:mysql-rw" -j KUBE-MARK-MASQ
-A KUBE-SEP-6A5LWEYXU2QKV4OB -p tcp -m comment --comment "openstack/glance-mysql-router-service:mysql-rw" -m tcp -j DNAT --to-destination 10.1.0.87:6446
-A KUBE-SEP-6CTTAFEROA2NJ6CZ -s 10.1.0.25/32 -m comment --comment "metallb-system/metallb-webhook-service" -j KUBE-MARK-MASQ
-A KUBE-SEP-6CTTAFEROA2NJ6CZ -p tcp -m comment --comment "metallb-system/metallb-webhook-service" -m tcp -j DNAT --to-destination 10.1.0.25:9443
-A KUBE-SEP-6XGJOPOBWR5IYMWB -s 10.1.0.190/32 -m comment --comment "openstack/nova-cell-mysql-router:juju-6446-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-6XGJOPOBWR5IYMWB -p tcp -m comment --comment "openstack/nova-cell-mysql-router:juju-6446-tcp" -m tcp -j DNAT --to-destination 10.1.0.190:6446
-A KUBE-SEP-75TMVCDBRKSIR6T3 -s 10.1.0.4/32 -m comment --comment "kube-system/metrics-server:https" -j KUBE-MARK-MASQ
-A KUBE-SEP-75TMVCDBRKSIR6T3 -p tcp -m comment --comment "kube-system/metrics-server:https" -m tcp -j DNAT --to-destination 10.1.0.4:10250
-A KUBE-SEP-7PZZ6FCNYKVAIFBD -s 10.1.0.188/32 -m comment --comment "openstack/traefik-lb:traefik-tls" -j KUBE-MARK-MASQ
-A KUBE-SEP-7PZZ6FCNYKVAIFBD -p tcp -m comment --comment "openstack/traefik-lb:traefik-tls" -m tcp -j DNAT --to-destination 10.1.0.188:443
-A KUBE-SEP-A6QVXX3URX7CNMRS -s 10.1.0.11/32 -m comment --comment "openstack/placement-mysql-router:juju-6448-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-A6QVXX3URX7CNMRS -p tcp -m comment --comment "openstack/placement-mysql-router:juju-6448-tcp" -m tcp -j DNAT --to-destination 10.1.0.11:6448
-A KUBE-SEP-AMOHLMHY6HW25FKG -s 10.1.0.11/32 -m comment --comment "openstack/placement-mysql-router:juju-6447-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-AMOHLMHY6HW25FKG -p tcp -m comment --comment "openstack/placement-mysql-router:juju-6447-tcp" -m tcp -j DNAT --to-destination 10.1.0.11:6447
-A KUBE-SEP-AP2WKIULSWO3MQQA -s 10.1.0.195/32 -m comment --comment "openstack/horizon-mysql-router:juju-6448-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-AP2WKIULSWO3MQQA -p tcp -m comment --comment "openstack/horizon-mysql-router:juju-6448-tcp" -m tcp -j DNAT --to-destination 10.1.0.195:6448
-A KUBE-SEP-AQDLFJXB2R7JVJQF -s 10.1.0.195/32 -m comment --comment "openstack/horizon-mysql-router:juju-6449-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-AQDLFJXB2R7JVJQF -p tcp -m comment --comment "openstack/horizon-mysql-router:juju-6449-tcp" -m tcp -j DNAT --to-destination 10.1.0.195:6449
-A KUBE-SEP-ARFYFUPJEFOYQVSE -s 10.1.0.190/32 -m comment --comment "openstack/nova-cell-mysql-router:juju-6449-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-ARFYFUPJEFOYQVSE -p tcp -m comment --comment "openstack/nova-cell-mysql-router:juju-6449-tcp" -m tcp -j DNAT --to-destination 10.1.0.190:6449
-A KUBE-SEP-BGKMRL7IVAS3H565 -s 10.1.0.23/32 -m comment --comment "openstack/neutron-mysql-router-service:mysql-ro" -j KUBE-MARK-MASQ
-A KUBE-SEP-BGKMRL7IVAS3H565 -p tcp -m comment --comment "openstack/neutron-mysql-router-service:mysql-ro" -m tcp -j DNAT --to-destination 10.1.0.23:6447
-A KUBE-SEP-CDKIGN3GWJCN6T35 -s 10.1.0.229/32 -m comment --comment "openstack/ovn-relay:juju-6642-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-CDKIGN3GWJCN6T35 -p tcp -m comment --comment "openstack/ovn-relay:juju-6642-tcp" -m tcp -j DNAT --to-destination 10.1.0.229:6642
-A KUBE-SEP-D5L6GTH3N5F4PQCH -s 172.24.188.57/32 -m comment --comment "kube-system/hubble-peer:peer-service" -j KUBE-MARK-MASQ
-A KUBE-SEP-D5L6GTH3N5F4PQCH -p tcp -m comment --comment "kube-system/hubble-peer:peer-service" -m tcp -j DNAT --to-destination 172.24.188.57:4244
-A KUBE-SEP-EXCUFREH2C7GAT2J -s 10.1.0.190/32 -m comment --comment "openstack/nova-cell-mysql-router-service:mysql-ro" -j KUBE-MARK-MASQ
-A KUBE-SEP-EXCUFREH2C7GAT2J -p tcp -m comment --comment "openstack/nova-cell-mysql-router-service:mysql-ro" -m tcp -j DNAT --to-destination 10.1.0.190:6447
-A KUBE-SEP-EY5I2MRWHJXPITWC -s 10.1.0.203/32 -m comment --comment "openstack/ovn-central:juju-6641-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-EY5I2MRWHJXPITWC -p tcp -m comment --comment "openstack/ovn-central:juju-6641-tcp" -m tcp -j DNAT --to-destination 10.1.0.203:6641
-A KUBE-SEP-F4BDB75HTLW4UPRF -s 10.1.0.250/32 -m comment --comment "openstack/mysql:juju-33060-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-F4BDB75HTLW4UPRF -p tcp -m comment --comment "openstack/mysql:juju-33060-tcp" -m tcp -j DNAT --to-destination 10.1.0.250:33060
-A KUBE-SEP-F6KTWIOJ3EUOO5GY -s 10.1.0.2/32 -m comment --comment "openstack/nova-api-mysql-router-service:mysql-rw" -j KUBE-MARK-MASQ
-A KUBE-SEP-F6KTWIOJ3EUOO5GY -p tcp -m comment --comment "openstack/nova-api-mysql-router-service:mysql-rw" -m tcp -j DNAT --to-destination 10.1.0.2:6446
-A KUBE-SEP-F7UQCUP4UCRNCYOK -s 10.1.0.130/32 -m comment --comment "openstack/placement:juju-8778-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-F7UQCUP4UCRNCYOK -p tcp -m comment --comment "openstack/placement:juju-8778-tcp" -m tcp -j DNAT --to-destination 10.1.0.130:8778
-A KUBE-SEP-FGUJ4FZGBXMCMHRU -s 10.1.0.72/32 -m comment --comment "openstack/nova-mysql-router:juju-6447-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-FGUJ4FZGBXMCMHRU -p tcp -m comment --comment "openstack/nova-mysql-router:juju-6447-tcp" -m tcp -j DNAT --to-destination 10.1.0.72:6447
-A KUBE-SEP-FHJ5ZGDXT4LU2S4G -s 10.1.0.74/32 -m comment --comment "openstack/cinder-mysql-router:juju-6448-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-FHJ5ZGDXT4LU2S4G -p tcp -m comment --comment "openstack/cinder-mysql-router:juju-6448-tcp" -m tcp -j DNAT --to-destination 10.1.0.74:6448
-A KUBE-SEP-FQIHC6XI2VSLUFCX -s 10.1.0.11/32 -m comment --comment "openstack/placement-mysql-router-service:mysql-rw" -j KUBE-MARK-MASQ
-A KUBE-SEP-FQIHC6XI2VSLUFCX -p tcp -m comment --comment "openstack/placement-mysql-router-service:mysql-rw" -m tcp -j DNAT --to-destination 10.1.0.11:6446
-A KUBE-SEP-FTX5SKQIM3TK2IJF -s 10.1.0.72/32 -m comment --comment "openstack/nova-mysql-router-service:mysql-rw" -j KUBE-MARK-MASQ
-A KUBE-SEP-FTX5SKQIM3TK2IJF -p tcp -m comment --comment "openstack/nova-mysql-router-service:mysql-rw" -m tcp -j DNAT --to-destination 10.1.0.72:6446
-A KUBE-SEP-GGDJKKWRWNVSKGE2 -s 10.1.0.250/32 -m comment --comment "openstack/mysql-primary" -j KUBE-MARK-MASQ
-A KUBE-SEP-GGDJKKWRWNVSKGE2 -p tcp -m comment --comment "openstack/mysql-primary" -m tcp -j DNAT --to-destination 10.1.0.250:3306
-A KUBE-SEP-GPOMYCHACVSM5COC -s 10.1.0.188/32 -m comment --comment "openstack/traefik:placeholder" -j KUBE-MARK-MASQ
-A KUBE-SEP-GPOMYCHACVSM5COC -p tcp -m comment --comment "openstack/traefik:placeholder" -m tcp -j DNAT --to-destination 10.1.0.188:65535
-A KUBE-SEP-GRZLUWUEOTG4U5JP -s 10.1.0.183/32 -m comment --comment "kube-system/ck-storage-rawfile-csi-node:metrics" -j KUBE-MARK-MASQ
-A KUBE-SEP-GRZLUWUEOTG4U5JP -p tcp -m comment --comment "kube-system/ck-storage-rawfile-csi-node:metrics" -m tcp -j DNAT --to-destination 10.1.0.183:9100
-A KUBE-SEP-GUU3QKVADYVZGFFV -s 10.1.0.229/32 -m comment --comment "openstack/ovn-relay-lb:southbound" -j KUBE-MARK-MASQ
-A KUBE-SEP-GUU3QKVADYVZGFFV -p tcp -m comment --comment "openstack/ovn-relay-lb:southbound" -m tcp -j DNAT --to-destination 10.1.0.229:6642
-A KUBE-SEP-GZM3DAJ3VA4LMPWJ -s 10.1.0.22/32 -m comment --comment "openstack/rabbitmq-lb:management" -j KUBE-MARK-MASQ
-A KUBE-SEP-GZM3DAJ3VA4LMPWJ -p tcp -m comment --comment "openstack/rabbitmq-lb:management" -m tcp -j DNAT --to-destination 10.1.0.22:15672
-A KUBE-SEP-H674HG7TKNZH66OW -s 10.1.0.110/32 -m comment --comment "kube-system/coredns:tcp-53" -j KUBE-MARK-MASQ
-A KUBE-SEP-H674HG7TKNZH66OW -p tcp -m comment --comment "kube-system/coredns:tcp-53" -m tcp -j DNAT --to-destination 10.1.0.110:53
-A KUBE-SEP-HABABXNWBMPDE2H6 -s 10.1.0.24/32 -m comment --comment "openstack/keystone-mysql-router:juju-6446-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-HABABXNWBMPDE2H6 -p tcp -m comment --comment "openstack/keystone-mysql-router:juju-6446-tcp" -m tcp -j DNAT --to-destination 10.1.0.24:6446
-A KUBE-SEP-HEQQF4F7YYMGLH5L -s 10.1.0.190/32 -m comment --comment "openstack/nova-cell-mysql-router-service:mysql-rw" -j KUBE-MARK-MASQ
-A KUBE-SEP-HEQQF4F7YYMGLH5L -p tcp -m comment --comment "openstack/nova-cell-mysql-router-service:mysql-rw" -m tcp -j DNAT --to-destination 10.1.0.190:6446
-A KUBE-SEP-IF7FHM2KI3KQTIWQ -s 10.1.0.204/32 -m comment --comment "openstack/cinder:juju-8776-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-IF7FHM2KI3KQTIWQ -p tcp -m comment --comment "openstack/cinder:juju-8776-tcp" -m tcp -j DNAT --to-destination 10.1.0.204:8776
-A KUBE-SEP-ISSNFAEUDFWZOC7N -s 10.1.0.87/32 -m comment --comment "openstack/glance-mysql-router:juju-6447-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-ISSNFAEUDFWZOC7N -p tcp -m comment --comment "openstack/glance-mysql-router:juju-6447-tcp" -m tcp -j DNAT --to-destination 10.1.0.87:6447
-A KUBE-SEP-J47LYGYP5XY66LU7 -s 10.1.0.72/32 -m comment --comment "openstack/nova-mysql-router-service:mysql-ro" -j KUBE-MARK-MASQ
-A KUBE-SEP-J47LYGYP5XY66LU7 -p tcp -m comment --comment "openstack/nova-mysql-router-service:mysql-ro" -m tcp -j DNAT --to-destination 10.1.0.72:6447
-A KUBE-SEP-JMCOK6N56XS4O46D -s 10.1.0.74/32 -m comment --comment "openstack/cinder-mysql-router:juju-6446-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-JMCOK6N56XS4O46D -p tcp -m comment --comment "openstack/cinder-mysql-router:juju-6446-tcp" -m tcp -j DNAT --to-destination 10.1.0.74:6446
-A KUBE-SEP-KHCQNPW7AOKMV4SW -s 10.1.0.74/32 -m comment --comment "openstack/cinder-mysql-router:juju-6447-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-KHCQNPW7AOKMV4SW -p tcp -m comment --comment "openstack/cinder-mysql-router:juju-6447-tcp" -m tcp -j DNAT --to-destination 10.1.0.74:6447
-A KUBE-SEP-KHVEECHUKRNTKR5X -s 10.1.0.10/32 -m comment --comment "openstack/glance:juju-9292-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-KHVEECHUKRNTKR5X -p tcp -m comment --comment "openstack/glance:juju-9292-tcp" -m tcp -j DNAT --to-destination 10.1.0.10:9292
-A KUBE-SEP-KYSUGISJCYD3PVJ2 -s 10.1.0.22/32 -m comment --comment "openstack/rabbitmq:juju-5672-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-KYSUGISJCYD3PVJ2 -p tcp -m comment --comment "openstack/rabbitmq:juju-5672-tcp" -m tcp -j DNAT --to-destination 10.1.0.22:5672
-A KUBE-SEP-L5TDKKW4CKBWMAHJ -s 10.1.0.249/32 -m comment --comment "openstack/traefik-public-lb:traefik-tls" -j KUBE-MARK-MASQ
-A KUBE-SEP-L5TDKKW4CKBWMAHJ -p tcp -m comment --comment "openstack/traefik-public-lb:traefik-tls" -m tcp -j DNAT --to-destination 10.1.0.249:443
-A KUBE-SEP-LBHMEUYII5HR3XNI -s 10.1.0.72/32 -m comment --comment "openstack/nova-mysql-router:juju-6449-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-LBHMEUYII5HR3XNI -p tcp -m comment --comment "openstack/nova-mysql-router:juju-6449-tcp" -m tcp -j DNAT --to-destination 10.1.0.72:6449
-A KUBE-SEP-LRH7MKSMNLZWGPWM -s 10.1.0.249/32 -m comment --comment "openstack/traefik-public-lb:traefik" -j KUBE-MARK-MASQ
-A KUBE-SEP-LRH7MKSMNLZWGPWM -p tcp -m comment --comment "openstack/traefik-public-lb:traefik" -m tcp -j DNAT --to-destination 10.1.0.249:80
-A KUBE-SEP-MJC6UFVYCFUNH63G -s 10.1.0.63/32 -m comment --comment "openstack/modeloperator" -j KUBE-MARK-MASQ
-A KUBE-SEP-MJC6UFVYCFUNH63G -p tcp -m comment --comment "openstack/modeloperator" -m tcp -j DNAT --to-destination 10.1.0.63:17071
-A KUBE-SEP-N2TKMWWQJX647RRE -s 10.1.0.75/32 -m comment --comment "controller-sunbeam-controller/controller-service:api-server" -j KUBE-MARK-MASQ
-A KUBE-SEP-N2TKMWWQJX647RRE -p tcp -m comment --comment "controller-sunbeam-controller/controller-service:api-server" -m tcp -j DNAT --to-destination 10.1.0.75:17070
-A KUBE-SEP-O4MLS572VP7OYHNV -s 10.1.0.72/32 -m comment --comment "openstack/nova-mysql-router:juju-6446-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-O4MLS572VP7OYHNV -p tcp -m comment --comment "openstack/nova-mysql-router:juju-6446-tcp" -m tcp -j DNAT --to-destination 10.1.0.72:6446
-A KUBE-SEP-OVBBYVOXVZKCGM25 -s 10.1.0.24/32 -m comment --comment "openstack/keystone-mysql-router:juju-6447-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-OVBBYVOXVZKCGM25 -p tcp -m comment --comment "openstack/keystone-mysql-router:juju-6447-tcp" -m tcp -j DNAT --to-destination 10.1.0.24:6447
-A KUBE-SEP-P4NRQAIO5OIH7MVF -s 10.1.0.11/32 -m comment --comment "openstack/placement-mysql-router:juju-6446-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-P4NRQAIO5OIH7MVF -p tcp -m comment --comment "openstack/placement-mysql-router:juju-6446-tcp" -m tcp -j DNAT --to-destination 10.1.0.11:6446
-A KUBE-SEP-P5MKNOXXZ6V2T3AF -s 10.1.0.195/32 -m comment --comment "openstack/horizon-mysql-router-service:mysql-ro" -j KUBE-MARK-MASQ
-A KUBE-SEP-P5MKNOXXZ6V2T3AF -p tcp -m comment --comment "openstack/horizon-mysql-router-service:mysql-ro" -m tcp -j DNAT --to-destination 10.1.0.195:6447
-A KUBE-SEP-P6U676ZGRAS57GNT -s 10.1.0.190/32 -m comment --comment "openstack/nova-cell-mysql-router:juju-6448-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-P6U676ZGRAS57GNT -p tcp -m comment --comment "openstack/nova-cell-mysql-router:juju-6448-tcp" -m tcp -j DNAT --to-destination 10.1.0.190:6448
-A KUBE-SEP-QDV3I7MF2AYO3MBG -s 10.1.0.74/32 -m comment --comment "openstack/cinder-mysql-router-service:mysql-rw" -j KUBE-MARK-MASQ
-A KUBE-SEP-QDV3I7MF2AYO3MBG -p tcp -m comment --comment "openstack/cinder-mysql-router-service:mysql-rw" -m tcp -j DNAT --to-destination 10.1.0.74:6446
-A KUBE-SEP-QS2RTFBHUNPGTER5 -s 10.1.0.24/32 -m comment --comment "openstack/keystone-mysql-router-service:mysql-ro" -j KUBE-MARK-MASQ
-A KUBE-SEP-QS2RTFBHUNPGTER5 -p tcp -m comment --comment "openstack/keystone-mysql-router-service:mysql-ro" -m tcp -j DNAT --to-destination 10.1.0.24:6447
-A KUBE-SEP-QWNV3K7IVYWQC5IO -s 10.1.0.87/32 -m comment --comment "openstack/glance-mysql-router:juju-6449-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-QWNV3K7IVYWQC5IO -p tcp -m comment --comment "openstack/glance-mysql-router:juju-6449-tcp" -m tcp -j DNAT --to-destination 10.1.0.87:6449
-A KUBE-SEP-R2ZWJESPBZMJ6JUG -s 10.1.0.195/32 -m comment --comment "openstack/horizon-mysql-router:juju-6446-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-R2ZWJESPBZMJ6JUG -p tcp -m comment --comment "openstack/horizon-mysql-router:juju-6446-tcp" -m tcp -j DNAT --to-destination 10.1.0.195:6446
-A KUBE-SEP-RGQQWGB2WG3ZBIGD -s 10.1.0.72/32 -m comment --comment "openstack/nova-mysql-router:juju-6448-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-RGQQWGB2WG3ZBIGD -p tcp -m comment --comment "openstack/nova-mysql-router:juju-6448-tcp" -m tcp -j DNAT --to-destination 10.1.0.72:6448
-A KUBE-SEP-SCVEBFNA7EKFE5GS -s 172.24.188.57/32 -m comment --comment "default/kubernetes:https" -j KUBE-MARK-MASQ
-A KUBE-SEP-SCVEBFNA7EKFE5GS -p tcp -m comment --comment "default/kubernetes:https" -m tcp -j DNAT --to-destination 172.24.188.57:6443
-A KUBE-SEP-SJMFRPMOSDNZM5XX -s 10.1.0.2/32 -m comment --comment "openstack/nova-api-mysql-router:juju-6449-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-SJMFRPMOSDNZM5XX -p tcp -m comment --comment "openstack/nova-api-mysql-router:juju-6449-tcp" -m tcp -j DNAT --to-destination 10.1.0.2:6449
-A KUBE-SEP-SVHQJMEQLTJVQUZ2 -s 10.1.0.87/32 -m comment --comment "openstack/glance-mysql-router-service:mysql-ro" -j KUBE-MARK-MASQ
-A KUBE-SEP-SVHQJMEQLTJVQUZ2 -p tcp -m comment --comment "openstack/glance-mysql-router-service:mysql-ro" -m tcp -j DNAT --to-destination 10.1.0.87:6447
-A KUBE-SEP-TFTXI4ROQR7EVWYH -s 10.1.0.87/32 -m comment --comment "openstack/glance-mysql-router:juju-6446-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-TFTXI4ROQR7EVWYH -p tcp -m comment --comment "openstack/glance-mysql-router:juju-6446-tcp" -m tcp -j DNAT --to-destination 10.1.0.87:6446
-A KUBE-SEP-TZGRWS6KFX2KMZXY -s 10.1.0.23/32 -m comment --comment "openstack/neutron-mysql-router:juju-6449-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-TZGRWS6KFX2KMZXY -p tcp -m comment --comment "openstack/neutron-mysql-router:juju-6449-tcp" -m tcp -j DNAT --to-destination 10.1.0.23:6449
-A KUBE-SEP-U5PUQT5PPRUZO6ES -s 10.1.0.24/32 -m comment --comment "openstack/keystone-mysql-router:juju-6448-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-U5PUQT5PPRUZO6ES -p tcp -m comment --comment "openstack/keystone-mysql-router:juju-6448-tcp" -m tcp -j DNAT --to-destination 10.1.0.24:6448
-A KUBE-SEP-UEMDLHBGWG2CP4WK -s 10.1.0.2/32 -m comment --comment "openstack/nova-api-mysql-router-service:mysql-ro" -j KUBE-MARK-MASQ
-A KUBE-SEP-UEMDLHBGWG2CP4WK -p tcp -m comment --comment "openstack/nova-api-mysql-router-service:mysql-ro" -m tcp -j DNAT --to-destination 10.1.0.2:6447
-A KUBE-SEP-UFDECIK27A4P66BD -s 10.1.0.2/32 -m comment --comment "openstack/nova-api-mysql-router:juju-6446-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-UFDECIK27A4P66BD -p tcp -m comment --comment "openstack/nova-api-mysql-router:juju-6446-tcp" -m tcp -j DNAT --to-destination 10.1.0.2:6446
-A KUBE-SEP-UHULVY5HJBN4FJH7 -s 10.1.0.188/32 -m comment --comment "openstack/traefik-lb:traefik" -j KUBE-MARK-MASQ
-A KUBE-SEP-UHULVY5HJBN4FJH7 -p tcp -m comment --comment "openstack/traefik-lb:traefik" -m tcp -j DNAT --to-destination 10.1.0.188:80
-A KUBE-SEP-UYVRZEQ5KTEQ3ONY -s 10.1.0.23/32 -m comment --comment "openstack/neutron-mysql-router-service:mysql-rw" -j KUBE-MARK-MASQ
-A KUBE-SEP-UYVRZEQ5KTEQ3ONY -p tcp -m comment --comment "openstack/neutron-mysql-router-service:mysql-rw" -m tcp -j DNAT --to-destination 10.1.0.23:6446
-A KUBE-SEP-UZDBYQ3R22BIBKDO -s 10.1.0.199/32 -m comment --comment "openstack/certificate-authority:placeholder" -j KUBE-MARK-MASQ
-A KUBE-SEP-UZDBYQ3R22BIBKDO -p tcp -m comment --comment "openstack/certificate-authority:placeholder" -m tcp -j DNAT --to-destination 10.1.0.199:65535
-A KUBE-SEP-VHUU3CUIAERUIBS5 -s 10.1.0.203/32 -m comment --comment "openstack/ovn-central:juju-6642-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-VHUU3CUIAERUIBS5 -p tcp -m comment --comment "openstack/ovn-central:juju-6642-tcp" -m tcp -j DNAT --to-destination 10.1.0.203:6642
-A KUBE-SEP-VU3QEMS4JVVZQODS -s 10.1.0.249/32 -m comment --comment "openstack/traefik-public:placeholder" -j KUBE-MARK-MASQ
-A KUBE-SEP-VU3QEMS4JVVZQODS -p tcp -m comment --comment "openstack/traefik-public:placeholder" -m tcp -j DNAT --to-destination 10.1.0.249:65535
-A KUBE-SEP-W322LC6RDXMTYWQT -s 10.1.0.24/32 -m comment --comment "openstack/keystone-mysql-router:juju-6449-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-W322LC6RDXMTYWQT -p tcp -m comment --comment "openstack/keystone-mysql-router:juju-6449-tcp" -m tcp -j DNAT --to-destination 10.1.0.24:6449
-A KUBE-SEP-W5XQ64GWYVOGXLMI -s 10.1.0.22/32 -m comment --comment "openstack/rabbitmq-lb:amqp" -j KUBE-MARK-MASQ
-A KUBE-SEP-W5XQ64GWYVOGXLMI -p tcp -m comment --comment "openstack/rabbitmq-lb:amqp" -m tcp -j DNAT --to-destination 10.1.0.22:5672
-A KUBE-SEP-WBG4P27KSP5SCXNX -s 10.1.0.23/32 -m comment --comment "openstack/neutron-mysql-router:juju-6447-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-WBG4P27KSP5SCXNX -p tcp -m comment --comment "openstack/neutron-mysql-router:juju-6447-tcp" -m tcp -j DNAT --to-destination 10.1.0.23:6447
-A KUBE-SEP-WLEVCVLV3TBBOYV7 -s 10.1.0.168/32 -m comment --comment "openstack/horizon:placeholder" -j KUBE-MARK-MASQ
-A KUBE-SEP-WLEVCVLV3TBBOYV7 -p tcp -m comment --comment "openstack/horizon:placeholder" -m tcp -j DNAT --to-destination 10.1.0.168:65535
-A KUBE-SEP-WQAE37XJYVJRA4VH -s 10.1.0.173/32 -m comment --comment "openstack/nova:juju-8774-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-WQAE37XJYVJRA4VH -p tcp -m comment --comment "openstack/nova:juju-8774-tcp" -m tcp -j DNAT --to-destination 10.1.0.173:8774
-A KUBE-SEP-WQWA44BHLTSNWXT2 -s 10.1.0.74/32 -m comment --comment "openstack/cinder-mysql-router:juju-6449-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-WQWA44BHLTSNWXT2 -p tcp -m comment --comment "openstack/cinder-mysql-router:juju-6449-tcp" -m tcp -j DNAT --to-destination 10.1.0.74:6449
-A KUBE-SEP-WZ6JHAPWWZKOVDDI -s 10.1.0.250/32 -m comment --comment "openstack/mysql:juju-3306-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-WZ6JHAPWWZKOVDDI -p tcp -m comment --comment "openstack/mysql:juju-3306-tcp" -m tcp -j DNAT --to-destination 10.1.0.250:3306
-A KUBE-SEP-X3IMBMTXGSLNWPB5 -s 10.1.0.11/32 -m comment --comment "openstack/placement-mysql-router:juju-6449-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-X3IMBMTXGSLNWPB5 -p tcp -m comment --comment "openstack/placement-mysql-router:juju-6449-tcp" -m tcp -j DNAT --to-destination 10.1.0.11:6449
-A KUBE-SEP-X4TWTRR3AZXA7XTQ -s 10.1.0.23/32 -m comment --comment "openstack/neutron-mysql-router:juju-6446-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-X4TWTRR3AZXA7XTQ -p tcp -m comment --comment "openstack/neutron-mysql-router:juju-6446-tcp" -m tcp -j DNAT --to-destination 10.1.0.23:6446
-A KUBE-SEP-XH7VETVDLJL4HU6Y -s 10.1.0.22/32 -m comment --comment "openstack/rabbitmq:juju-15672-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-XH7VETVDLJL4HU6Y -p tcp -m comment --comment "openstack/rabbitmq:juju-15672-tcp" -m tcp -j DNAT --to-destination 10.1.0.22:15672
-A KUBE-SEP-XJX73PRF2NCB343X -s 10.1.0.11/32 -m comment --comment "openstack/placement-mysql-router-service:mysql-ro" -j KUBE-MARK-MASQ
-A KUBE-SEP-XJX73PRF2NCB343X -p tcp -m comment --comment "openstack/placement-mysql-router-service:mysql-ro" -m tcp -j DNAT --to-destination 10.1.0.11:6447
-A KUBE-SEP-XL6PVUU23ARINBGK -s 10.1.0.195/32 -m comment --comment "openstack/horizon-mysql-router:juju-6447-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-XL6PVUU23ARINBGK -p tcp -m comment --comment "openstack/horizon-mysql-router:juju-6447-tcp" -m tcp -j DNAT --to-destination 10.1.0.195:6447
-A KUBE-SEP-XTV56QAQBUME6KWU -s 10.1.0.195/32 -m comment --comment "openstack/horizon-mysql-router-service:mysql-rw" -j KUBE-MARK-MASQ
-A KUBE-SEP-XTV56QAQBUME6KWU -p tcp -m comment --comment "openstack/horizon-mysql-router-service:mysql-rw" -m tcp -j DNAT --to-destination 10.1.0.195:6446
-A KUBE-SEP-YZQAWCQ6PRHSOG2R -s 10.1.0.15/32 -m comment --comment "openstack/neutron:juju-9696-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-YZQAWCQ6PRHSOG2R -p tcp -m comment --comment "openstack/neutron:juju-9696-tcp" -m tcp -j DNAT --to-destination 10.1.0.15:9696
-A KUBE-SERVICES -d 10.152.183.244/32 -p tcp -m comment --comment "openstack/ovn-relay-lb:southbound cluster IP" -m tcp --dport 6642 -j KUBE-SVC-KA4JXI62FCBBOWNM
-A KUBE-SERVICES -d 172.16.1.203/32 -p tcp -m comment --comment "openstack/ovn-relay-lb:southbound loadbalancer IP" -m tcp --dport 6642 -j KUBE-EXT-KA4JXI62FCBBOWNM
-A KUBE-SERVICES -d 10.152.183.233/32 -p tcp -m comment --comment "openstack/glance-mysql-router:juju-6447-tcp cluster IP" -m tcp --dport 6447 -j KUBE-SVC-7SIYKFBUK6PWTI3U
-A KUBE-SERVICES -d 10.152.183.152/32 -p tcp -m comment --comment "openstack/mysql:juju-33060-tcp cluster IP" -m tcp --dport 33060 -j KUBE-SVC-6W2KODAMISSIISVW
-A KUBE-SERVICES -d 10.152.183.112/32 -p tcp -m comment --comment "openstack/mysql-primary cluster IP" -m tcp --dport 3306 -j KUBE-SVC-4HLXV62L3OSLK2CU
-A KUBE-SERVICES -d 10.152.183.206/32 -p tcp -m comment --comment "openstack/keystone-mysql-router-service:mysql-ro cluster IP" -m tcp --dport 6447 -j KUBE-SVC-NFW7O3U2KREULMFM
-A KUBE-SERVICES -d 10.152.183.114/32 -p tcp -m comment --comment "openstack/cinder-mysql-router-service:mysql-rw cluster IP" -m tcp --dport 6446 -j KUBE-SVC-OH6GR75JNR5V6AQ5
-A KUBE-SERVICES -d 10.152.183.74/32 -p tcp -m comment --comment "openstack/keystone-mysql-router:juju-6447-tcp cluster IP" -m tcp --dport 6447 -j KUBE-SVC-FVC6YTQWAJEBYUAB
-A KUBE-SERVICES -d 10.152.183.173/32 -p tcp -m comment --comment "openstack/placement-mysql-router:juju-6449-tcp cluster IP" -m tcp --dport 6449 -j KUBE-SVC-VSPETNIDFFNUMMLP
-A KUBE-SERVICES -d 10.152.183.36/32 -p tcp -m comment --comment "openstack/horizon-mysql-router-service:mysql-ro cluster IP" -m tcp --dport 6447 -j KUBE-SVC-FNEG4Q2YHANSNYKH
-A KUBE-SERVICES -d 10.152.183.132/32 -p tcp -m comment --comment "openstack/keystone:juju-5000-tcp cluster IP" -m tcp --dport 5000 -j KUBE-SVC-W6CZGP33LLP5NNXR
-A KUBE-SERVICES -d 10.152.183.71/32 -p tcp -m comment --comment "openstack/ovn-relay:juju-6642-tcp cluster IP" -m tcp --dport 6642 -j KUBE-SVC-R2DNFYQWSUYN4HZ5
-A KUBE-SERVICES -d 10.152.183.137/32 -p tcp -m comment --comment "openstack/placement:juju-8778-tcp cluster IP" -m tcp --dport 8778 -j KUBE-SVC-EC7NGPDWZVI62YFY
-A KUBE-SERVICES -d 10.152.183.151/32 -p tcp -m comment --comment "openstack/nova-cell-mysql-router:juju-6448-tcp cluster IP" -m tcp --dport 6448 -j KUBE-SVC-NBUZLUPLYBOL4XV2
-A KUBE-SERVICES -d 10.152.183.58/32 -p tcp -m comment --comment "openstack/cinder-mysql-router:juju-6446-tcp cluster IP" -m tcp --dport 6446 -j KUBE-SVC-N5FN5Z63AEU4YRHS
-A KUBE-SERVICES -d 10.152.183.143/32 -p tcp -m comment --comment "openstack/horizon-mysql-router:juju-6446-tcp cluster IP" -m tcp --dport 6446 -j KUBE-SVC-3HRKMZB4P4MFJF2L
-A KUBE-SERVICES -d 10.152.183.143/32 -p tcp -m comment --comment "openstack/horizon-mysql-router:juju-6447-tcp cluster IP" -m tcp --dport 6447 -j KUBE-SVC-CK3MJ7V6E6L466FX
-A KUBE-SERVICES -d 10.152.183.143/32 -p tcp -m comment --comment "openstack/horizon-mysql-router:juju-6448-tcp cluster IP" -m tcp --dport 6448 -j KUBE-SVC-CARWDOT4HKMPWEIJ
-A KUBE-SERVICES -d 10.152.183.57/32 -p tcp -m comment --comment "kube-system/ck-storage-rawfile-csi-node:metrics cluster IP" -m tcp --dport 9100 -j KUBE-SVC-PTVCZ3VAX7G3RD3W
-A KUBE-SERVICES -d 10.152.183.142/32 -p tcp -m comment --comment "openstack/horizon:placeholder cluster IP" -m tcp --dport 65535 -j KUBE-SVC-IPF63AGY3JJ3PHNR
-A KUBE-SERVICES -d 10.152.183.145/32 -p tcp -m comment --comment "openstack/nova-api-mysql-router:juju-6449-tcp cluster IP" -m tcp --dport 6449 -j KUBE-SVC-5IGJHCC5K33X6JB4
-A KUBE-SERVICES -d 10.152.183.243/32 -p tcp -m comment --comment "openstack/ovn-central:juju-6642-tcp cluster IP" -m tcp --dport 6642 -j KUBE-SVC-V5366VPRH7XNBMX4
-A KUBE-SERVICES -d 10.152.183.156/32 -p tcp -m comment --comment "kube-system/metrics-server:https cluster IP" -m tcp --dport 443 -j KUBE-SVC-Z4ANX4WAEWEBLCTM
-A KUBE-SERVICES -d 10.152.183.197/32 -p tcp -m comment --comment "openstack/nova-mysql-router:juju-6448-tcp cluster IP" -m tcp --dport 6448 -j KUBE-SVC-VHXZV2MWLNZKUNRE
-A KUBE-SERVICES -d 10.152.183.49/32 -p tcp -m comment --comment "openstack/neutron-mysql-router:juju-6448-tcp cluster IP" -m tcp --dport 6448 -j KUBE-SVC-AIE77B74XSMQBHZS
-A KUBE-SERVICES -d 10.152.183.58/32 -p tcp -m comment --comment "openstack/cinder-mysql-router:juju-6447-tcp cluster IP" -m tcp --dport 6447 -j KUBE-SVC-5HFU74LCVK2NGTJ6
-A KUBE-SERVICES -d 10.152.183.173/32 -p tcp -m comment --comment "openstack/placement-mysql-router:juju-6448-tcp cluster IP" -m tcp --dport 6448 -j KUBE-SVC-ZZM3V76CVXV5HBWS
-A KUBE-SERVICES -d 10.152.183.49/32 -p tcp -m comment --comment "openstack/neutron-mysql-router:juju-6447-tcp cluster IP" -m tcp --dport 6447 -j KUBE-SVC-DHAKWN7N5WBBRJVA
-A KUBE-SERVICES -d 10.152.183.74/32 -p tcp -m comment --comment "openstack/keystone-mysql-router:juju-6448-tcp cluster IP" -m tcp --dport 6448 -j KUBE-SVC-4IIQZXW2ZE4J2DMX
-A KUBE-SERVICES -d 10.152.183.164/32 -p tcp -m comment --comment "openstack/modeloperator cluster IP" -m tcp --dport 17071 -j KUBE-SVC-5OJMLWIU3ZRYIDL4
-A KUBE-SERVICES -d 10.152.183.59/32 -p tcp -m comment --comment "openstack/placement-mysql-router-service:mysql-rw cluster IP" -m tcp --dport 6446 -j KUBE-SVC-HBSZUQSSSKZ2DX2W
-A KUBE-SERVICES -d 10.152.183.235/32 -p tcp -m comment --comment "openstack/neutron-mysql-router-service:mysql-rw cluster IP" -m tcp --dport 6446 -j KUBE-SVC-ZNSDVCZ2K3R5JXU3
-A KUBE-SERVICES -d 10.152.183.197/32 -p tcp -m comment --comment "openstack/nova-mysql-router:juju-6449-tcp cluster IP" -m tcp --dport 6449 -j KUBE-SVC-AR5EATNVJMRTK4UN
-A KUBE-SERVICES -d 10.152.183.1/32 -p tcp -m comment --comment "default/kubernetes:https cluster IP" -m tcp --dport 443 -j KUBE-SVC-NPX46M4PTMTKRN6Y
-A KUBE-SERVICES -d 10.152.183.150/32 -p tcp -m comment --comment "openstack/rabbitmq-lb:amqp cluster IP" -m tcp --dport 5672 -j KUBE-SVC-4CEW3KAYVEBDHARI
-A KUBE-SERVICES -d 172.16.1.202/32 -p tcp -m comment --comment "openstack/rabbitmq-lb:amqp loadbalancer IP" -m tcp --dport 5672 -j KUBE-EXT-4CEW3KAYVEBDHARI
-A KUBE-SERVICES -d 10.152.183.145/32 -p tcp -m comment --comment "openstack/nova-api-mysql-router:juju-6447-tcp cluster IP" -m tcp --dport 6447 -j KUBE-SVC-S3UST2XMIBA7FREH
-A KUBE-SERVICES -d 10.152.183.173/32 -p tcp -m comment --comment "openstack/placement-mysql-router:juju-6446-tcp cluster IP" -m tcp --dport 6446 -j KUBE-SVC-QYT45U6IUOVTR7GR
-A KUBE-SERVICES -d 10.152.183.73/32 -p tcp -m comment --comment "openstack/traefik-lb:traefik cluster IP" -m tcp --dport 80 -j KUBE-SVC-QSZEUE2LHPQKOWY3
-A KUBE-SERVICES -d 172.16.1.205/32 -p tcp -m comment --comment "openstack/traefik-lb:traefik loadbalancer IP" -m tcp --dport 80 -j KUBE-EXT-QSZEUE2LHPQKOWY3
-A KUBE-SERVICES -d 10.152.183.114/32 -p tcp -m comment --comment "openstack/cinder-mysql-router-service:mysql-ro cluster IP" -m tcp --dport 6447 -j KUBE-SVC-Z7Z7TFWQ7C3HKWH5
-A KUBE-SERVICES -d 10.152.183.233/32 -p tcp -m comment --comment "openstack/glance-mysql-router:juju-6446-tcp cluster IP" -m tcp --dport 6446 -j KUBE-SVC-HFO6PGS3TBRMKKTO
-A KUBE-SERVICES -d 10.152.183.151/32 -p tcp -m comment --comment "openstack/nova-cell-mysql-router:juju-6446-tcp cluster IP" -m tcp --dport 6446 -j KUBE-SVC-T2A5XX4GG2DS67LO
-A KUBE-SERVICES -d 10.152.183.178/32 -p tcp -m comment --comment "kube-system/coredns:tcp-53 cluster IP" -m tcp --dport 53 -j KUBE-SVC-J3T3F7QHMRKAJCWA
-A KUBE-SERVICES -d 10.152.183.205/32 -p tcp -m comment --comment "metallb-system/metallb-webhook-service cluster IP" -m tcp --dport 443 -j KUBE-SVC-GZ25SP4UFGF7SAVL
-A KUBE-SERVICES -d 10.152.183.85/32 -p tcp -m comment --comment "kube-system/hubble-peer:peer-service cluster IP" -m tcp --dport 443 -j KUBE-SVL-NZTS37XDTDNXGCKJ
-A KUBE-SERVICES -d 10.152.183.44/32 -p tcp -m comment --comment "openstack/traefik:placeholder cluster IP" -m tcp --dport 65535 -j KUBE-SVC-FLB2BORMZWZ53IKE
-A KUBE-SERVICES -d 10.152.183.59/32 -p tcp -m comment --comment "openstack/placement-mysql-router-service:mysql-ro cluster IP" -m tcp --dport 6447 -j KUBE-SVC-S6AUUPURCZ7AAWMA
-A KUBE-SERVICES -d 10.152.183.229/32 -p tcp -m comment --comment "openstack/glance:juju-9292-tcp cluster IP" -m tcp --dport 9292 -j KUBE-SVC-25BGXZHPZLAFXBHH
-A KUBE-SERVICES -d 10.152.183.49/32 -p tcp -m comment --comment "openstack/neutron-mysql-router:juju-6446-tcp cluster IP" -m tcp --dport 6446 -j KUBE-SVC-X3OSFPMHGAZQ2YBE
-A KUBE-SERVICES -d 10.152.183.151/32 -p tcp -m comment --comment "openstack/nova-cell-mysql-router:juju-6447-tcp cluster IP" -m tcp --dport 6447 -j KUBE-SVC-XHHZHCOSUHOWDZQT
-A KUBE-SERVICES -d 10.152.183.173/32 -p tcp -m comment --comment "openstack/placement-mysql-router:juju-6447-tcp cluster IP" -m tcp --dport 6447 -j KUBE-SVC-C7E7VPVTVPTHKS4T
-A KUBE-SERVICES -d 10.152.183.211/32 -p tcp -m comment --comment "openstack/nova-api-mysql-router-service:mysql-rw cluster IP" -m tcp --dport 6446 -j KUBE-SVC-6HT62HI2DHYOGE2D
-A KUBE-SERVICES -d 10.152.183.155/32 -p tcp -m comment --comment "controller-sunbeam-controller/controller-service:api-server cluster IP" -m tcp --dport 17070 -j KUBE-SVC-2GHBFEQ4WUOEGD4J
-A KUBE-SERVICES -d 172.16.1.201/32 -p tcp -m comment --comment "controller-sunbeam-controller/controller-service:api-server loadbalancer IP" -m tcp --dport 17070 -j KUBE-EXT-2GHBFEQ4WUOEGD4J
-A KUBE-SERVICES -d 10.152.183.228/32 -p tcp -m comment --comment "controller-sunbeam-controller/modeloperator cluster IP" -m tcp --dport 17071 -j KUBE-SVC-I34V4KD4D3MMHP5H
-A KUBE-SERVICES -d 10.152.183.20/32 -p tcp -m comment --comment "openstack/traefik-public:placeholder cluster IP" -m tcp --dport 65535 -j KUBE-SVC-VEHAYQGNYRE4RE3R
-A KUBE-SERVICES -d 10.152.183.197/32 -p tcp -m comment --comment "openstack/nova-mysql-router:juju-6446-tcp cluster IP" -m tcp --dport 6446 -j KUBE-SVC-TWKSNJRZYL5OW6JB
-A KUBE-SERVICES -d 10.152.183.197/32 -p tcp -m comment --comment "openstack/nova-mysql-router:juju-6447-tcp cluster IP" -m tcp --dport 6447 -j KUBE-SVC-5MS7UA2EH5LXQS3R
-A KUBE-SERVICES -d 10.152.183.70/32 -p tcp -m comment --comment "openstack/traefik-public-lb:traefik-tls cluster IP" -m tcp --dport 443 -j KUBE-SVC-S5XBNUBUDJVDMWVM
-A KUBE-SERVICES -d 172.16.1.204/32 -p tcp -m comment --comment "openstack/traefik-public-lb:traefik-tls loadbalancer IP" -m tcp --dport 443 -j KUBE-EXT-S5XBNUBUDJVDMWVM
-A KUBE-SERVICES -d 10.152.183.235/32 -p tcp -m comment --comment "openstack/neutron-mysql-router-service:mysql-ro cluster IP" -m tcp --dport 6447 -j KUBE-SVC-AYNH6PUVJF3OV3BH
-A KUBE-SERVICES -d 10.152.183.79/32 -p tcp -m comment --comment "openstack/nova-mysql-router-service:mysql-rw cluster IP" -m tcp --dport 6446 -j KUBE-SVC-NR7UDE62IINWMF5S
-A KUBE-SERVICES -d 10.152.183.234/32 -p tcp -m comment --comment "openstack/nova:juju-8774-tcp cluster IP" -m tcp --dport 8774 -j KUBE-SVC-H2N4QTWNT37REUZF
-A KUBE-SERVICES -d 10.152.183.100/32 -p tcp -m comment --comment "openstack/certificate-authority:placeholder cluster IP" -m tcp --dport 65535 -j KUBE-SVC-DQ5YLQGNPI2N5PR5
-A KUBE-SERVICES -d 10.152.183.145/32 -p tcp -m comment --comment "openstack/nova-api-mysql-router:juju-6446-tcp cluster IP" -m tcp --dport 6446 -j KUBE-SVC-WWJGWTRY3BPQWFPG
-A KUBE-SERVICES -d 10.152.183.233/32 -p tcp -m comment --comment "openstack/glance-mysql-router:juju-6449-tcp cluster IP" -m tcp --dport 6449 -j KUBE-SVC-CKWNKTHLBAY2KY5R
-A KUBE-SERVICES -d 10.152.183.151/32 -p tcp -m comment --comment "openstack/nova-cell-mysql-router:juju-6449-tcp cluster IP" -m tcp --dport 6449 -j KUBE-SVC-HIAST7RNRGUK7QM6
-A KUBE-SERVICES -d 10.152.183.58/32 -p tcp -m comment --comment "openstack/cinder-mysql-router:juju-6449-tcp cluster IP" -m tcp --dport 6449 -j KUBE-SVC-UE4IWHDBZ4KSDIKK
-A KUBE-SERVICES -d 10.152.183.74/32 -p tcp -m comment --comment "openstack/keystone-mysql-router:juju-6446-tcp cluster IP" -m tcp --dport 6446 -j KUBE-SVC-FC7Q4PM2XPHNGY3Z
-A KUBE-SERVICES -d 10.152.183.148/32 -p tcp -m comment --comment "openstack/neutron:juju-9696-tcp cluster IP" -m tcp --dport 9696 -j KUBE-SVC-XXMU3DECOG5ENS45
-A KUBE-SERVICES -d 10.152.183.178/32 -p udp -m comment --comment "kube-system/coredns:udp-53 cluster IP" -m udp --dport 53 -j KUBE-SVC-66XFSLUND2K6O7D7
-A KUBE-SERVICES -d 10.152.183.232/32 -p tcp -m comment --comment "openstack/rabbitmq:juju-15672-tcp cluster IP" -m tcp --dport 15672 -j KUBE-SVC-O7BJYTUOHY7SPRGC
-A KUBE-SERVICES -d 10.152.183.49/32 -p tcp -m comment --comment "openstack/neutron-mysql-router:juju-6449-tcp cluster IP" -m tcp --dport 6449 -j KUBE-SVC-5DFXTPSQT27A6GON
-A KUBE-SERVICES -d 10.152.183.145/32 -p tcp -m comment --comment "openstack/nova-api-mysql-router:juju-6448-tcp cluster IP" -m tcp --dport 6448 -j KUBE-SVC-IDBTIWXF2KSQYTVB
-A KUBE-SERVICES -d 10.152.183.233/32 -p tcp -m comment --comment "openstack/glance-mysql-router:juju-6448-tcp cluster IP" -m tcp --dport 6448 -j KUBE-SVC-OWU5PCOHLV4TUVBY
-A KUBE-SERVICES -d 10.152.183.143/32 -p tcp -m comment --comment "openstack/horizon-mysql-router:juju-6449-tcp cluster IP" -m tcp --dport 6449 -j KUBE-SVC-SJNPEF2FGSI2RDWV
-A KUBE-SERVICES -d 10.152.183.73/32 -p tcp -m comment --comment "openstack/traefik-lb:traefik-tls cluster IP" -m tcp --dport 443 -j KUBE-SVC-RK5GH6LB2OL25CKL
-A KUBE-SERVICES -d 172.16.1.205/32 -p tcp -m comment --comment "openstack/traefik-lb:traefik-tls loadbalancer IP" -m tcp --dport 443 -j KUBE-EXT-RK5GH6LB2OL25CKL
-A KUBE-SERVICES -d 10.152.183.214/32 -p tcp -m comment --comment "openstack/glance-mysql-router-service:mysql-rw cluster IP" -m tcp --dport 6446 -j KUBE-SVC-XHOWG2P2MJQGSNKR
-A KUBE-SERVICES -d 10.152.183.211/32 -p tcp -m comment --comment "openstack/nova-api-mysql-router-service:mysql-ro cluster IP" -m tcp --dport 6447 -j KUBE-SVC-VJCU6USTTMCOF35P
-A KUBE-SERVICES -d 10.152.183.206/32 -p tcp -m comment --comment "openstack/keystone-mysql-router-service:mysql-rw cluster IP" -m tcp --dport 6446 -j KUBE-SVC-KGMEH26DXNEYNQH5
-A KUBE-SERVICES -d 10.152.183.79/32 -p tcp -m comment --comment "openstack/nova-mysql-router-service:mysql-ro cluster IP" -m tcp --dport 6447 -j KUBE-SVC-KSSVZVUZLU66I6II
-A KUBE-SERVICES -d 10.152.183.222/32 -p tcp -m comment --comment "openstack/nova-cell-mysql-router-service:mysql-rw cluster IP" -m tcp --dport 6446 -j KUBE-SVC-TMO2M4BFCDHJDPZC
-A KUBE-SERVICES -d 10.152.183.36/32 -p tcp -m comment --comment "openstack/horizon-mysql-router-service:mysql-rw cluster IP" -m tcp --dport 6446 -j KUBE-SVC-KPB6FCOD7LTIJ44L
-A KUBE-SERVICES -d 10.152.183.150/32 -p tcp -m comment --comment "openstack/rabbitmq-lb:management cluster IP" -m tcp --dport 15672 -j KUBE-SVC-GKBUMSO5ZDY7DGMM
-A KUBE-SERVICES -d 172.16.1.202/32 -p tcp -m comment --comment "openstack/rabbitmq-lb:management loadbalancer IP" -m tcp --dport 15672 -j KUBE-EXT-GKBUMSO5ZDY7DGMM
-A KUBE-SERVICES -d 10.152.183.74/32 -p tcp -m comment --comment "openstack/keystone-mysql-router:juju-6449-tcp cluster IP" -m tcp --dport 6449 -j KUBE-SVC-4PGFOIU5ZTKHV6HD
-A KUBE-SERVICES -d 10.152.183.243/32 -p tcp -m comment --comment "openstack/ovn-central:juju-6641-tcp cluster IP" -m tcp --dport 6641 -j KUBE-SVC-UUFXHO3P5GE6FM2A
-A KUBE-SERVICES -d 10.152.183.152/32 -p tcp -m comment --comment "openstack/mysql:juju-3306-tcp cluster IP" -m tcp --dport 3306 -j KUBE-SVC-7EQ25GQUT7F6XR24
-A KUBE-SERVICES -d 10.152.183.232/32 -p tcp -m comment --comment "openstack/rabbitmq:juju-5672-tcp cluster IP" -m tcp --dport 5672 -j KUBE-SVC-6CPLJQD7PSGKEZEM
-A KUBE-SERVICES -d 10.152.183.58/32 -p tcp -m comment --comment "openstack/cinder-mysql-router:juju-6448-tcp cluster IP" -m tcp --dport 6448 -j KUBE-SVC-VCVY7LAENSPKSDW3
-A KUBE-SERVICES -d 10.152.183.70/32 -p tcp -m comment --comment "openstack/traefik-public-lb:traefik cluster IP" -m tcp --dport 80 -j KUBE-SVC-NDKHTIKW26ZIMAD4
-A KUBE-SERVICES -d 172.16.1.204/32 -p tcp -m comment --comment "openstack/traefik-public-lb:traefik loadbalancer IP" -m tcp --dport 80 -j KUBE-EXT-NDKHTIKW26ZIMAD4
-A KUBE-SERVICES -d 10.152.183.214/32 -p tcp -m comment --comment "openstack/glance-mysql-router-service:mysql-ro cluster IP" -m tcp --dport 6447 -j KUBE-SVC-PYAS3EZXAAJLKJM2
-A KUBE-SERVICES -d 10.152.183.222/32 -p tcp -m comment --comment "openstack/nova-cell-mysql-router-service:mysql-ro cluster IP" -m tcp --dport 6447 -j KUBE-SVC-XCH4QPFYCNPMWMXP
-A KUBE-SERVICES -d 10.152.183.210/32 -p tcp -m comment --comment "openstack/cinder:juju-8776-tcp cluster IP" -m tcp --dport 8776 -j KUBE-SVC-W7FAHUBBL5ZDPENZ
-A KUBE-SERVICES -m comment --comment "kubernetes service nodeports; NOTE: this must be the last rule in this chain" -m addrtype --dst-type LOCAL -j KUBE-NODEPORTS
-A KUBE-SVC-25BGXZHPZLAFXBHH ! -s 10.1.0.0/16 -d 10.152.183.229/32 -p tcp -m comment --comment "openstack/glance:juju-9292-tcp cluster IP" -m tcp --dport 9292 -j KUBE-MARK-MASQ
-A KUBE-SVC-25BGXZHPZLAFXBHH -m comment --comment "openstack/glance:juju-9292-tcp -> 10.1.0.10:9292" -j KUBE-SEP-KHVEECHUKRNTKR5X
-A KUBE-SVC-2GHBFEQ4WUOEGD4J ! -s 10.1.0.0/16 -d 10.152.183.155/32 -p tcp -m comment --comment "controller-sunbeam-controller/controller-service:api-server cluster IP" -m tcp --dport 17070 -j KUBE-MARK-MASQ
-A KUBE-SVC-2GHBFEQ4WUOEGD4J -m comment --comment "controller-sunbeam-controller/controller-service:api-server -> 10.1.0.75:17070" -j KUBE-SEP-N2TKMWWQJX647RRE
-A KUBE-SVC-3HRKMZB4P4MFJF2L ! -s 10.1.0.0/16 -d 10.152.183.143/32 -p tcp -m comment --comment "openstack/horizon-mysql-router:juju-6446-tcp cluster IP" -m tcp --dport 6446 -j KUBE-MARK-MASQ
-A KUBE-SVC-3HRKMZB4P4MFJF2L -m comment --comment "openstack/horizon-mysql-router:juju-6446-tcp -> 10.1.0.195:6446" -j KUBE-SEP-R2ZWJESPBZMJ6JUG
-A KUBE-SVC-4CEW3KAYVEBDHARI ! -s 10.1.0.0/16 -d 10.152.183.150/32 -p tcp -m comment --comment "openstack/rabbitmq-lb:amqp cluster IP" -m tcp --dport 5672 -j KUBE-MARK-MASQ
-A KUBE-SVC-4CEW3KAYVEBDHARI -m comment --comment "openstack/rabbitmq-lb:amqp -> 10.1.0.22:5672" -j KUBE-SEP-W5XQ64GWYVOGXLMI
-A KUBE-SVC-4HLXV62L3OSLK2CU ! -s 10.1.0.0/16 -d 10.152.183.112/32 -p tcp -m comment --comment "openstack/mysql-primary cluster IP" -m tcp --dport 3306 -j KUBE-MARK-MASQ
-A KUBE-SVC-4HLXV62L3OSLK2CU -m comment --comment "openstack/mysql-primary -> 10.1.0.250:3306" -j KUBE-SEP-GGDJKKWRWNVSKGE2
-A KUBE-SVC-4IIQZXW2ZE4J2DMX ! -s 10.1.0.0/16 -d 10.152.183.74/32 -p tcp -m comment --comment "openstack/keystone-mysql-router:juju-6448-tcp cluster IP" -m tcp --dport 6448 -j KUBE-MARK-MASQ
-A KUBE-SVC-4IIQZXW2ZE4J2DMX -m comment --comment "openstack/keystone-mysql-router:juju-6448-tcp -> 10.1.0.24:6448" -j KUBE-SEP-U5PUQT5PPRUZO6ES
-A KUBE-SVC-4PGFOIU5ZTKHV6HD ! -s 10.1.0.0/16 -d 10.152.183.74/32 -p tcp -m comment --comment "openstack/keystone-mysql-router:juju-6449-tcp cluster IP" -m tcp --dport 6449 -j KUBE-MARK-MASQ
-A KUBE-SVC-4PGFOIU5ZTKHV6HD -m comment --comment "openstack/keystone-mysql-router:juju-6449-tcp -> 10.1.0.24:6449" -j KUBE-SEP-W322LC6RDXMTYWQT
-A KUBE-SVC-5DFXTPSQT27A6GON ! -s 10.1.0.0/16 -d 10.152.183.49/32 -p tcp -m comment --comment "openstack/neutron-mysql-router:juju-6449-tcp cluster IP" -m tcp --dport 6449 -j KUBE-MARK-MASQ
-A KUBE-SVC-5DFXTPSQT27A6GON -m comment --comment "openstack/neutron-mysql-router:juju-6449-tcp -> 10.1.0.23:6449" -j KUBE-SEP-TZGRWS6KFX2KMZXY
-A KUBE-SVC-5HFU74LCVK2NGTJ6 ! -s 10.1.0.0/16 -d 10.152.183.58/32 -p tcp -m comment --comment "openstack/cinder-mysql-router:juju-6447-tcp cluster IP" -m tcp --dport 6447 -j KUBE-MARK-MASQ
-A KUBE-SVC-5HFU74LCVK2NGTJ6 -m comment --comment "openstack/cinder-mysql-router:juju-6447-tcp -> 10.1.0.74:6447" -j KUBE-SEP-KHCQNPW7AOKMV4SW
-A KUBE-SVC-5IGJHCC5K33X6JB4 ! -s 10.1.0.0/16 -d 10.152.183.145/32 -p tcp -m comment --comment "openstack/nova-api-mysql-router:juju-6449-tcp cluster IP" -m tcp --dport 6449 -j KUBE-MARK-MASQ
-A KUBE-SVC-5IGJHCC5K33X6JB4 -m comment --comment "openstack/nova-api-mysql-router:juju-6449-tcp -> 10.1.0.2:6449" -j KUBE-SEP-SJMFRPMOSDNZM5XX
-A KUBE-SVC-5MS7UA2EH5LXQS3R ! -s 10.1.0.0/16 -d 10.152.183.197/32 -p tcp -m comment --comment "openstack/nova-mysql-router:juju-6447-tcp cluster IP" -m tcp --dport 6447 -j KUBE-MARK-MASQ
-A KUBE-SVC-5MS7UA2EH5LXQS3R -m comment --comment "openstack/nova-mysql-router:juju-6447-tcp -> 10.1.0.72:6447" -j KUBE-SEP-FGUJ4FZGBXMCMHRU
-A KUBE-SVC-5OJMLWIU3ZRYIDL4 ! -s 10.1.0.0/16 -d 10.152.183.164/32 -p tcp -m comment --comment "openstack/modeloperator cluster IP" -m tcp --dport 17071 -j KUBE-MARK-MASQ
-A KUBE-SVC-5OJMLWIU3ZRYIDL4 -m comment --comment "openstack/modeloperator -> 10.1.0.63:17071" -j KUBE-SEP-MJC6UFVYCFUNH63G
-A KUBE-SVC-66XFSLUND2K6O7D7 ! -s 10.1.0.0/16 -d 10.152.183.178/32 -p udp -m comment --comment "kube-system/coredns:udp-53 cluster IP" -m udp --dport 53 -j KUBE-MARK-MASQ
-A KUBE-SVC-66XFSLUND2K6O7D7 -m comment --comment "kube-system/coredns:udp-53 -> 10.1.0.110:53" -j KUBE-SEP-5IDQ77SG7PDP37FR
-A KUBE-SVC-6CPLJQD7PSGKEZEM ! -s 10.1.0.0/16 -d 10.152.183.232/32 -p tcp -m comment --comment "openstack/rabbitmq:juju-5672-tcp cluster IP" -m tcp --dport 5672 -j KUBE-MARK-MASQ
-A KUBE-SVC-6CPLJQD7PSGKEZEM -m comment --comment "openstack/rabbitmq:juju-5672-tcp -> 10.1.0.22:5672" -j KUBE-SEP-KYSUGISJCYD3PVJ2
-A KUBE-SVC-6HT62HI2DHYOGE2D ! -s 10.1.0.0/16 -d 10.152.183.211/32 -p tcp -m comment --comment "openstack/nova-api-mysql-router-service:mysql-rw cluster IP" -m tcp --dport 6446 -j KUBE-MARK-MASQ
-A KUBE-SVC-6HT62HI2DHYOGE2D -m comment --comment "openstack/nova-api-mysql-router-service:mysql-rw -> 10.1.0.2:6446" -j KUBE-SEP-F6KTWIOJ3EUOO5GY
-A KUBE-SVC-6W2KODAMISSIISVW ! -s 10.1.0.0/16 -d 10.152.183.152/32 -p tcp -m comment --comment "openstack/mysql:juju-33060-tcp cluster IP" -m tcp --dport 33060 -j KUBE-MARK-MASQ
-A KUBE-SVC-6W2KODAMISSIISVW -m comment --comment "openstack/mysql:juju-33060-tcp -> 10.1.0.250:33060" -j KUBE-SEP-F4BDB75HTLW4UPRF
-A KUBE-SVC-7EQ25GQUT7F6XR24 ! -s 10.1.0.0/16 -d 10.152.183.152/32 -p tcp -m comment --comment "openstack/mysql:juju-3306-tcp cluster IP" -m tcp --dport 3306 -j KUBE-MARK-MASQ
-A KUBE-SVC-7EQ25GQUT7F6XR24 -m comment --comment "openstack/mysql:juju-3306-tcp -> 10.1.0.250:3306" -j KUBE-SEP-WZ6JHAPWWZKOVDDI
-A KUBE-SVC-7SIYKFBUK6PWTI3U ! -s 10.1.0.0/16 -d 10.152.183.233/32 -p tcp -m comment --comment "openstack/glance-mysql-router:juju-6447-tcp cluster IP" -m tcp --dport 6447 -j KUBE-MARK-MASQ
-A KUBE-SVC-7SIYKFBUK6PWTI3U -m comment --comment "openstack/glance-mysql-router:juju-6447-tcp -> 10.1.0.87:6447" -j KUBE-SEP-ISSNFAEUDFWZOC7N
-A KUBE-SVC-AIE77B74XSMQBHZS ! -s 10.1.0.0/16 -d 10.152.183.49/32 -p tcp -m comment --comment "openstack/neutron-mysql-router:juju-6448-tcp cluster IP" -m tcp --dport 6448 -j KUBE-MARK-MASQ
-A KUBE-SVC-AIE77B74XSMQBHZS -m comment --comment "openstack/neutron-mysql-router:juju-6448-tcp -> 10.1.0.23:6448" -j KUBE-SEP-5LPMEFCX3Z45S4A3
-A KUBE-SVC-AR5EATNVJMRTK4UN ! -s 10.1.0.0/16 -d 10.152.183.197/32 -p tcp -m comment --comment "openstack/nova-mysql-router:juju-6449-tcp cluster IP" -m tcp --dport 6449 -j KUBE-MARK-MASQ
-A KUBE-SVC-AR5EATNVJMRTK4UN -m comment --comment "openstack/nova-mysql-router:juju-6449-tcp -> 10.1.0.72:6449" -j KUBE-SEP-LBHMEUYII5HR3XNI
-A KUBE-SVC-AYNH6PUVJF3OV3BH ! -s 10.1.0.0/16 -d 10.152.183.235/32 -p tcp -m comment --comment "openstack/neutron-mysql-router-service:mysql-ro cluster IP" -m tcp --dport 6447 -j KUBE-MARK-MASQ
-A KUBE-SVC-AYNH6PUVJF3OV3BH -m comment --comment "openstack/neutron-mysql-router-service:mysql-ro -> 10.1.0.23:6447" -j KUBE-SEP-BGKMRL7IVAS3H565
-A KUBE-SVC-C7E7VPVTVPTHKS4T ! -s 10.1.0.0/16 -d 10.152.183.173/32 -p tcp -m comment --comment "openstack/placement-mysql-router:juju-6447-tcp cluster IP" -m tcp --dport 6447 -j KUBE-MARK-MASQ
-A KUBE-SVC-C7E7VPVTVPTHKS4T -m comment --comment "openstack/placement-mysql-router:juju-6447-tcp -> 10.1.0.11:6447" -j KUBE-SEP-AMOHLMHY6HW25FKG
-A KUBE-SVC-CARWDOT4HKMPWEIJ ! -s 10.1.0.0/16 -d 10.152.183.143/32 -p tcp -m comment --comment "openstack/horizon-mysql-router:juju-6448-tcp cluster IP" -m tcp --dport 6448 -j KUBE-MARK-MASQ
-A KUBE-SVC-CARWDOT4HKMPWEIJ -m comment --comment "openstack/horizon-mysql-router:juju-6448-tcp -> 10.1.0.195:6448" -j KUBE-SEP-AP2WKIULSWO3MQQA
-A KUBE-SVC-CK3MJ7V6E6L466FX ! -s 10.1.0.0/16 -d 10.152.183.143/32 -p tcp -m comment --comment "openstack/horizon-mysql-router:juju-6447-tcp cluster IP" -m tcp --dport 6447 -j KUBE-MARK-MASQ
-A KUBE-SVC-CK3MJ7V6E6L466FX -m comment --comment "openstack/horizon-mysql-router:juju-6447-tcp -> 10.1.0.195:6447" -j KUBE-SEP-XL6PVUU23ARINBGK
-A KUBE-SVC-CKWNKTHLBAY2KY5R ! -s 10.1.0.0/16 -d 10.152.183.233/32 -p tcp -m comment --comment "openstack/glance-mysql-router:juju-6449-tcp cluster IP" -m tcp --dport 6449 -j KUBE-MARK-MASQ
-A KUBE-SVC-CKWNKTHLBAY2KY5R -m comment --comment "openstack/glance-mysql-router:juju-6449-tcp -> 10.1.0.87:6449" -j KUBE-SEP-QWNV3K7IVYWQC5IO
-A KUBE-SVC-DHAKWN7N5WBBRJVA ! -s 10.1.0.0/16 -d 10.152.183.49/32 -p tcp -m comment --comment "openstack/neutron-mysql-router:juju-6447-tcp cluster IP" -m tcp --dport 6447 -j KUBE-MARK-MASQ
-A KUBE-SVC-DHAKWN7N5WBBRJVA -m comment --comment "openstack/neutron-mysql-router:juju-6447-tcp -> 10.1.0.23:6447" -j KUBE-SEP-WBG4P27KSP5SCXNX
-A KUBE-SVC-DQ5YLQGNPI2N5PR5 ! -s 10.1.0.0/16 -d 10.152.183.100/32 -p tcp -m comment --comment "openstack/certificate-authority:placeholder cluster IP" -m tcp --dport 65535 -j KUBE-MARK-MASQ
-A KUBE-SVC-DQ5YLQGNPI2N5PR5 -m comment --comment "openstack/certificate-authority:placeholder -> 10.1.0.199:65535" -j KUBE-SEP-UZDBYQ3R22BIBKDO
-A KUBE-SVC-EC7NGPDWZVI62YFY ! -s 10.1.0.0/16 -d 10.152.183.137/32 -p tcp -m comment --comment "openstack/placement:juju-8778-tcp cluster IP" -m tcp --dport 8778 -j KUBE-MARK-MASQ
-A KUBE-SVC-EC7NGPDWZVI62YFY -m comment --comment "openstack/placement:juju-8778-tcp -> 10.1.0.130:8778" -j KUBE-SEP-F7UQCUP4UCRNCYOK
-A KUBE-SVC-FC7Q4PM2XPHNGY3Z ! -s 10.1.0.0/16 -d 10.152.183.74/32 -p tcp -m comment --comment "openstack/keystone-mysql-router:juju-6446-tcp cluster IP" -m tcp --dport 6446 -j KUBE-MARK-MASQ
-A KUBE-SVC-FC7Q4PM2XPHNGY3Z -m comment --comment "openstack/keystone-mysql-router:juju-6446-tcp -> 10.1.0.24:6446" -j KUBE-SEP-HABABXNWBMPDE2H6
-A KUBE-SVC-FLB2BORMZWZ53IKE ! -s 10.1.0.0/16 -d 10.152.183.44/32 -p tcp -m comment --comment "openstack/traefik:placeholder cluster IP" -m tcp --dport 65535 -j KUBE-MARK-MASQ
-A KUBE-SVC-FLB2BORMZWZ53IKE -m comment --comment "openstack/traefik:placeholder -> 10.1.0.188:65535" -j KUBE-SEP-GPOMYCHACVSM5COC
-A KUBE-SVC-FNEG4Q2YHANSNYKH ! -s 10.1.0.0/16 -d 10.152.183.36/32 -p tcp -m comment --comment "openstack/horizon-mysql-router-service:mysql-ro cluster IP" -m tcp --dport 6447 -j KUBE-MARK-MASQ
-A KUBE-SVC-FNEG4Q2YHANSNYKH -m comment --comment "openstack/horizon-mysql-router-service:mysql-ro -> 10.1.0.195:6447" -j KUBE-SEP-P5MKNOXXZ6V2T3AF
-A KUBE-SVC-FVC6YTQWAJEBYUAB ! -s 10.1.0.0/16 -d 10.152.183.74/32 -p tcp -m comment --comment "openstack/keystone-mysql-router:juju-6447-tcp cluster IP" -m tcp --dport 6447 -j KUBE-MARK-MASQ
-A KUBE-SVC-FVC6YTQWAJEBYUAB -m comment --comment "openstack/keystone-mysql-router:juju-6447-tcp -> 10.1.0.24:6447" -j KUBE-SEP-OVBBYVOXVZKCGM25
-A KUBE-SVC-GKBUMSO5ZDY7DGMM ! -s 10.1.0.0/16 -d 10.152.183.150/32 -p tcp -m comment --comment "openstack/rabbitmq-lb:management cluster IP" -m tcp --dport 15672 -j KUBE-MARK-MASQ
-A KUBE-SVC-GKBUMSO5ZDY7DGMM -m comment --comment "openstack/rabbitmq-lb:management -> 10.1.0.22:15672" -j KUBE-SEP-GZM3DAJ3VA4LMPWJ
-A KUBE-SVC-GZ25SP4UFGF7SAVL ! -s 10.1.0.0/16 -d 10.152.183.205/32 -p tcp -m comment --comment "metallb-system/metallb-webhook-service cluster IP" -m tcp --dport 443 -j KUBE-MARK-MASQ
-A KUBE-SVC-GZ25SP4UFGF7SAVL -m comment --comment "metallb-system/metallb-webhook-service -> 10.1.0.25:9443" -j KUBE-SEP-6CTTAFEROA2NJ6CZ
-A KUBE-SVC-H2N4QTWNT37REUZF ! -s 10.1.0.0/16 -d 10.152.183.234/32 -p tcp -m comment --comment "openstack/nova:juju-8774-tcp cluster IP" -m tcp --dport 8774 -j KUBE-MARK-MASQ
-A KUBE-SVC-H2N4QTWNT37REUZF -m comment --comment "openstack/nova:juju-8774-tcp -> 10.1.0.173:8774" -j KUBE-SEP-WQAE37XJYVJRA4VH
-A KUBE-SVC-HBSZUQSSSKZ2DX2W ! -s 10.1.0.0/16 -d 10.152.183.59/32 -p tcp -m comment --comment "openstack/placement-mysql-router-service:mysql-rw cluster IP" -m tcp --dport 6446 -j KUBE-MARK-MASQ
-A KUBE-SVC-HBSZUQSSSKZ2DX2W -m comment --comment "openstack/placement-mysql-router-service:mysql-rw -> 10.1.0.11:6446" -j KUBE-SEP-FQIHC6XI2VSLUFCX
-A KUBE-SVC-HFO6PGS3TBRMKKTO ! -s 10.1.0.0/16 -d 10.152.183.233/32 -p tcp -m comment --comment "openstack/glance-mysql-router:juju-6446-tcp cluster IP" -m tcp --dport 6446 -j KUBE-MARK-MASQ
-A KUBE-SVC-HFO6PGS3TBRMKKTO -m comment --comment "openstack/glance-mysql-router:juju-6446-tcp -> 10.1.0.87:6446" -j KUBE-SEP-TFTXI4ROQR7EVWYH
-A KUBE-SVC-HIAST7RNRGUK7QM6 ! -s 10.1.0.0/16 -d 10.152.183.151/32 -p tcp -m comment --comment "openstack/nova-cell-mysql-router:juju-6449-tcp cluster IP" -m tcp --dport 6449 -j KUBE-MARK-MASQ
-A KUBE-SVC-HIAST7RNRGUK7QM6 -m comment --comment "openstack/nova-cell-mysql-router:juju-6449-tcp -> 10.1.0.190:6449" -j KUBE-SEP-ARFYFUPJEFOYQVSE
-A KUBE-SVC-I34V4KD4D3MMHP5H ! -s 10.1.0.0/16 -d 10.152.183.228/32 -p tcp -m comment --comment "controller-sunbeam-controller/modeloperator cluster IP" -m tcp --dport 17071 -j KUBE-MARK-MASQ
-A KUBE-SVC-I34V4KD4D3MMHP5H -m comment --comment "controller-sunbeam-controller/modeloperator -> 10.1.0.243:17071" -j KUBE-SEP-3YEFNB4P6WVUVEP7
-A KUBE-SVC-IDBTIWXF2KSQYTVB ! -s 10.1.0.0/16 -d 10.152.183.145/32 -p tcp -m comment --comment "openstack/nova-api-mysql-router:juju-6448-tcp cluster IP" -m tcp --dport 6448 -j KUBE-MARK-MASQ
-A KUBE-SVC-IDBTIWXF2KSQYTVB -m comment --comment "openstack/nova-api-mysql-router:juju-6448-tcp -> 10.1.0.2:6448" -j KUBE-SEP-36PV3PHFCRL6SNCF
-A KUBE-SVC-IPF63AGY3JJ3PHNR ! -s 10.1.0.0/16 -d 10.152.183.142/32 -p tcp -m comment --comment "openstack/horizon:placeholder cluster IP" -m tcp --dport 65535 -j KUBE-MARK-MASQ
-A KUBE-SVC-IPF63AGY3JJ3PHNR -m comment --comment "openstack/horizon:placeholder -> 10.1.0.168:65535" -j KUBE-SEP-WLEVCVLV3TBBOYV7
-A KUBE-SVC-J3T3F7QHMRKAJCWA ! -s 10.1.0.0/16 -d 10.152.183.178/32 -p tcp -m comment --comment "kube-system/coredns:tcp-53 cluster IP" -m tcp --dport 53 -j KUBE-MARK-MASQ
-A KUBE-SVC-J3T3F7QHMRKAJCWA -m comment --comment "kube-system/coredns:tcp-53 -> 10.1.0.110:53" -j KUBE-SEP-H674HG7TKNZH66OW
-A KUBE-SVC-KA4JXI62FCBBOWNM ! -s 10.1.0.0/16 -d 10.152.183.244/32 -p tcp -m comment --comment "openstack/ovn-relay-lb:southbound cluster IP" -m tcp --dport 6642 -j KUBE-MARK-MASQ
-A KUBE-SVC-KA4JXI62FCBBOWNM -m comment --comment "openstack/ovn-relay-lb:southbound -> 10.1.0.229:6642" -j KUBE-SEP-GUU3QKVADYVZGFFV
-A KUBE-SVC-KGMEH26DXNEYNQH5 ! -s 10.1.0.0/16 -d 10.152.183.206/32 -p tcp -m comment --comment "openstack/keystone-mysql-router-service:mysql-rw cluster IP" -m tcp --dport 6446 -j KUBE-MARK-MASQ
-A KUBE-SVC-KGMEH26DXNEYNQH5 -m comment --comment "openstack/keystone-mysql-router-service:mysql-rw -> 10.1.0.24:6446" -j KUBE-SEP-672ZTEWJCOZPJJ7C
-A KUBE-SVC-KPB6FCOD7LTIJ44L ! -s 10.1.0.0/16 -d 10.152.183.36/32 -p tcp -m comment --comment "openstack/horizon-mysql-router-service:mysql-rw cluster IP" -m tcp --dport 6446 -j KUBE-MARK-MASQ
-A KUBE-SVC-KPB6FCOD7LTIJ44L -m comment --comment "openstack/horizon-mysql-router-service:mysql-rw -> 10.1.0.195:6446" -j KUBE-SEP-XTV56QAQBUME6KWU
-A KUBE-SVC-KSSVZVUZLU66I6II ! -s 10.1.0.0/16 -d 10.152.183.79/32 -p tcp -m comment --comment "openstack/nova-mysql-router-service:mysql-ro cluster IP" -m tcp --dport 6447 -j KUBE-MARK-MASQ
-A KUBE-SVC-KSSVZVUZLU66I6II -m comment --comment "openstack/nova-mysql-router-service:mysql-ro -> 10.1.0.72:6447" -j KUBE-SEP-J47LYGYP5XY66LU7
-A KUBE-SVC-N5FN5Z63AEU4YRHS ! -s 10.1.0.0/16 -d 10.152.183.58/32 -p tcp -m comment --comment "openstack/cinder-mysql-router:juju-6446-tcp cluster IP" -m tcp --dport 6446 -j KUBE-MARK-MASQ
-A KUBE-SVC-N5FN5Z63AEU4YRHS -m comment --comment "openstack/cinder-mysql-router:juju-6446-tcp -> 10.1.0.74:6446" -j KUBE-SEP-JMCOK6N56XS4O46D
-A KUBE-SVC-NBUZLUPLYBOL4XV2 ! -s 10.1.0.0/16 -d 10.152.183.151/32 -p tcp -m comment --comment "openstack/nova-cell-mysql-router:juju-6448-tcp cluster IP" -m tcp --dport 6448 -j KUBE-MARK-MASQ
-A KUBE-SVC-NBUZLUPLYBOL4XV2 -m comment --comment "openstack/nova-cell-mysql-router:juju-6448-tcp -> 10.1.0.190:6448" -j KUBE-SEP-P6U676ZGRAS57GNT
-A KUBE-SVC-NDKHTIKW26ZIMAD4 ! -s 10.1.0.0/16 -d 10.152.183.70/32 -p tcp -m comment --comment "openstack/traefik-public-lb:traefik cluster IP" -m tcp --dport 80 -j KUBE-MARK-MASQ
-A KUBE-SVC-NDKHTIKW26ZIMAD4 -m comment --comment "openstack/traefik-public-lb:traefik -> 10.1.0.249:80" -j KUBE-SEP-LRH7MKSMNLZWGPWM
-A KUBE-SVC-NFW7O3U2KREULMFM ! -s 10.1.0.0/16 -d 10.152.183.206/32 -p tcp -m comment --comment "openstack/keystone-mysql-router-service:mysql-ro cluster IP" -m tcp --dport 6447 -j KUBE-MARK-MASQ
-A KUBE-SVC-NFW7O3U2KREULMFM -m comment --comment "openstack/keystone-mysql-router-service:mysql-ro -> 10.1.0.24:6447" -j KUBE-SEP-QS2RTFBHUNPGTER5
-A KUBE-SVC-NPX46M4PTMTKRN6Y ! -s 10.1.0.0/16 -d 10.152.183.1/32 -p tcp -m comment --comment "default/kubernetes:https cluster IP" -m tcp --dport 443 -j KUBE-MARK-MASQ
-A KUBE-SVC-NPX46M4PTMTKRN6Y -m comment --comment "default/kubernetes:https -> 172.24.188.57:6443" -j KUBE-SEP-SCVEBFNA7EKFE5GS
-A KUBE-SVC-NR7UDE62IINWMF5S ! -s 10.1.0.0/16 -d 10.152.183.79/32 -p tcp -m comment --comment "openstack/nova-mysql-router-service:mysql-rw cluster IP" -m tcp --dport 6446 -j KUBE-MARK-MASQ
-A KUBE-SVC-NR7UDE62IINWMF5S -m comment --comment "openstack/nova-mysql-router-service:mysql-rw -> 10.1.0.72:6446" -j KUBE-SEP-FTX5SKQIM3TK2IJF
-A KUBE-SVC-O7BJYTUOHY7SPRGC ! -s 10.1.0.0/16 -d 10.152.183.232/32 -p tcp -m comment --comment "openstack/rabbitmq:juju-15672-tcp cluster IP" -m tcp --dport 15672 -j KUBE-MARK-MASQ
-A KUBE-SVC-O7BJYTUOHY7SPRGC -m comment --comment "openstack/rabbitmq:juju-15672-tcp -> 10.1.0.22:15672" -j KUBE-SEP-XH7VETVDLJL4HU6Y
-A KUBE-SVC-OH6GR75JNR5V6AQ5 ! -s 10.1.0.0/16 -d 10.152.183.114/32 -p tcp -m comment --comment "openstack/cinder-mysql-router-service:mysql-rw cluster IP" -m tcp --dport 6446 -j KUBE-MARK-MASQ
-A KUBE-SVC-OH6GR75JNR5V6AQ5 -m comment --comment "openstack/cinder-mysql-router-service:mysql-rw -> 10.1.0.74:6446" -j KUBE-SEP-QDV3I7MF2AYO3MBG
-A KUBE-SVC-OWU5PCOHLV4TUVBY ! -s 10.1.0.0/16 -d 10.152.183.233/32 -p tcp -m comment --comment "openstack/glance-mysql-router:juju-6448-tcp cluster IP" -m tcp --dport 6448 -j KUBE-MARK-MASQ
-A KUBE-SVC-OWU5PCOHLV4TUVBY -m comment --comment "openstack/glance-mysql-router:juju-6448-tcp -> 10.1.0.87:6448" -j KUBE-SEP-24YXE2BZQ2BBN2FZ
-A KUBE-SVC-PTVCZ3VAX7G3RD3W ! -s 10.1.0.0/16 -d 10.152.183.57/32 -p tcp -m comment --comment "kube-system/ck-storage-rawfile-csi-node:metrics cluster IP" -m tcp --dport 9100 -j KUBE-MARK-MASQ
-A KUBE-SVC-PTVCZ3VAX7G3RD3W -m comment --comment "kube-system/ck-storage-rawfile-csi-node:metrics -> 10.1.0.183:9100" -j KUBE-SEP-GRZLUWUEOTG4U5JP
-A KUBE-SVC-PYAS3EZXAAJLKJM2 ! -s 10.1.0.0/16 -d 10.152.183.214/32 -p tcp -m comment --comment "openstack/glance-mysql-router-service:mysql-ro cluster IP" -m tcp --dport 6447 -j KUBE-MARK-MASQ
-A KUBE-SVC-PYAS3EZXAAJLKJM2 -m comment --comment "openstack/glance-mysql-router-service:mysql-ro -> 10.1.0.87:6447" -j KUBE-SEP-SVHQJMEQLTJVQUZ2
-A KUBE-SVC-QSZEUE2LHPQKOWY3 ! -s 10.1.0.0/16 -d 10.152.183.73/32 -p tcp -m comment --comment "openstack/traefik-lb:traefik cluster IP" -m tcp --dport 80 -j KUBE-MARK-MASQ
-A KUBE-SVC-QSZEUE2LHPQKOWY3 -m comment --comment "openstack/traefik-lb:traefik -> 10.1.0.188:80" -j KUBE-SEP-UHULVY5HJBN4FJH7
-A KUBE-SVC-QYT45U6IUOVTR7GR ! -s 10.1.0.0/16 -d 10.152.183.173/32 -p tcp -m comment --comment "openstack/placement-mysql-router:juju-6446-tcp cluster IP" -m tcp --dport 6446 -j KUBE-MARK-MASQ
-A KUBE-SVC-QYT45U6IUOVTR7GR -m comment --comment "openstack/placement-mysql-router:juju-6446-tcp -> 10.1.0.11:6446" -j KUBE-SEP-P4NRQAIO5OIH7MVF
-A KUBE-SVC-R2DNFYQWSUYN4HZ5 ! -s 10.1.0.0/16 -d 10.152.183.71/32 -p tcp -m comment --comment "openstack/ovn-relay:juju-6642-tcp cluster IP" -m tcp --dport 6642 -j KUBE-MARK-MASQ
-A KUBE-SVC-R2DNFYQWSUYN4HZ5 -m comment --comment "openstack/ovn-relay:juju-6642-tcp -> 10.1.0.229:6642" -j KUBE-SEP-CDKIGN3GWJCN6T35
-A KUBE-SVC-RK5GH6LB2OL25CKL ! -s 10.1.0.0/16 -d 10.152.183.73/32 -p tcp -m comment --comment "openstack/traefik-lb:traefik-tls cluster IP" -m tcp --dport 443 -j KUBE-MARK-MASQ
-A KUBE-SVC-RK5GH6LB2OL25CKL -m comment --comment "openstack/traefik-lb:traefik-tls -> 10.1.0.188:443" -j KUBE-SEP-7PZZ6FCNYKVAIFBD
-A KUBE-SVC-S3UST2XMIBA7FREH ! -s 10.1.0.0/16 -d 10.152.183.145/32 -p tcp -m comment --comment "openstack/nova-api-mysql-router:juju-6447-tcp cluster IP" -m tcp --dport 6447 -j KUBE-MARK-MASQ
-A KUBE-SVC-S3UST2XMIBA7FREH -m comment --comment "openstack/nova-api-mysql-router:juju-6447-tcp -> 10.1.0.2:6447" -j KUBE-SEP-5OCBBV4XPDVX7PNJ
-A KUBE-SVC-S5XBNUBUDJVDMWVM ! -s 10.1.0.0/16 -d 10.152.183.70/32 -p tcp -m comment --comment "openstack/traefik-public-lb:traefik-tls cluster IP" -m tcp --dport 443 -j KUBE-MARK-MASQ
-A KUBE-SVC-S5XBNUBUDJVDMWVM -m comment --comment "openstack/traefik-public-lb:traefik-tls -> 10.1.0.249:443" -j KUBE-SEP-L5TDKKW4CKBWMAHJ
-A KUBE-SVC-S6AUUPURCZ7AAWMA ! -s 10.1.0.0/16 -d 10.152.183.59/32 -p tcp -m comment --comment "openstack/placement-mysql-router-service:mysql-ro cluster IP" -m tcp --dport 6447 -j KUBE-MARK-MASQ
-A KUBE-SVC-S6AUUPURCZ7AAWMA -m comment --comment "openstack/placement-mysql-router-service:mysql-ro -> 10.1.0.11:6447" -j KUBE-SEP-XJX73PRF2NCB343X
-A KUBE-SVC-SJNPEF2FGSI2RDWV ! -s 10.1.0.0/16 -d 10.152.183.143/32 -p tcp -m comment --comment "openstack/horizon-mysql-router:juju-6449-tcp cluster IP" -m tcp --dport 6449 -j KUBE-MARK-MASQ
-A KUBE-SVC-SJNPEF2FGSI2RDWV -m comment --comment "openstack/horizon-mysql-router:juju-6449-tcp -> 10.1.0.195:6449" -j KUBE-SEP-AQDLFJXB2R7JVJQF
-A KUBE-SVC-T2A5XX4GG2DS67LO ! -s 10.1.0.0/16 -d 10.152.183.151/32 -p tcp -m comment --comment "openstack/nova-cell-mysql-router:juju-6446-tcp cluster IP" -m tcp --dport 6446 -j KUBE-MARK-MASQ
-A KUBE-SVC-T2A5XX4GG2DS67LO -m comment --comment "openstack/nova-cell-mysql-router:juju-6446-tcp -> 10.1.0.190:6446" -j KUBE-SEP-6XGJOPOBWR5IYMWB
-A KUBE-SVC-TMO2M4BFCDHJDPZC ! -s 10.1.0.0/16 -d 10.152.183.222/32 -p tcp -m comment --comment "openstack/nova-cell-mysql-router-service:mysql-rw cluster IP" -m tcp --dport 6446 -j KUBE-MARK-MASQ
-A KUBE-SVC-TMO2M4BFCDHJDPZC -m comment --comment "openstack/nova-cell-mysql-router-service:mysql-rw -> 10.1.0.190:6446" -j KUBE-SEP-HEQQF4F7YYMGLH5L
-A KUBE-SVC-TWKSNJRZYL5OW6JB ! -s 10.1.0.0/16 -d 10.152.183.197/32 -p tcp -m comment --comment "openstack/nova-mysql-router:juju-6446-tcp cluster IP" -m tcp --dport 6446 -j KUBE-MARK-MASQ
-A KUBE-SVC-TWKSNJRZYL5OW6JB -m comment --comment "openstack/nova-mysql-router:juju-6446-tcp -> 10.1.0.72:6446" -j KUBE-SEP-O4MLS572VP7OYHNV
-A KUBE-SVC-UE4IWHDBZ4KSDIKK ! -s 10.1.0.0/16 -d 10.152.183.58/32 -p tcp -m comment --comment "openstack/cinder-mysql-router:juju-6449-tcp cluster IP" -m tcp --dport 6449 -j KUBE-MARK-MASQ
-A KUBE-SVC-UE4IWHDBZ4KSDIKK -m comment --comment "openstack/cinder-mysql-router:juju-6449-tcp -> 10.1.0.74:6449" -j KUBE-SEP-WQWA44BHLTSNWXT2
-A KUBE-SVC-UUFXHO3P5GE6FM2A ! -s 10.1.0.0/16 -d 10.152.183.243/32 -p tcp -m comment --comment "openstack/ovn-central:juju-6641-tcp cluster IP" -m tcp --dport 6641 -j KUBE-MARK-MASQ
-A KUBE-SVC-UUFXHO3P5GE6FM2A -m comment --comment "openstack/ovn-central:juju-6641-tcp -> 10.1.0.203:6641" -j KUBE-SEP-EY5I2MRWHJXPITWC
-A KUBE-SVC-V5366VPRH7XNBMX4 ! -s 10.1.0.0/16 -d 10.152.183.243/32 -p tcp -m comment --comment "openstack/ovn-central:juju-6642-tcp cluster IP" -m tcp --dport 6642 -j KUBE-MARK-MASQ
-A KUBE-SVC-V5366VPRH7XNBMX4 -m comment --comment "openstack/ovn-central:juju-6642-tcp -> 10.1.0.203:6642" -j KUBE-SEP-VHUU3CUIAERUIBS5
-A KUBE-SVC-VCVY7LAENSPKSDW3 ! -s 10.1.0.0/16 -d 10.152.183.58/32 -p tcp -m comment --comment "openstack/cinder-mysql-router:juju-6448-tcp cluster IP" -m tcp --dport 6448 -j KUBE-MARK-MASQ
-A KUBE-SVC-VCVY7LAENSPKSDW3 -m comment --comment "openstack/cinder-mysql-router:juju-6448-tcp -> 10.1.0.74:6448" -j KUBE-SEP-FHJ5ZGDXT4LU2S4G
-A KUBE-SVC-VEHAYQGNYRE4RE3R ! -s 10.1.0.0/16 -d 10.152.183.20/32 -p tcp -m comment --comment "openstack/traefik-public:placeholder cluster IP" -m tcp --dport 65535 -j KUBE-MARK-MASQ
-A KUBE-SVC-VEHAYQGNYRE4RE3R -m comment --comment "openstack/traefik-public:placeholder -> 10.1.0.249:65535" -j KUBE-SEP-VU3QEMS4JVVZQODS
-A KUBE-SVC-VHXZV2MWLNZKUNRE ! -s 10.1.0.0/16 -d 10.152.183.197/32 -p tcp -m comment --comment "openstack/nova-mysql-router:juju-6448-tcp cluster IP" -m tcp --dport 6448 -j KUBE-MARK-MASQ
-A KUBE-SVC-VHXZV2MWLNZKUNRE -m comment --comment "openstack/nova-mysql-router:juju-6448-tcp -> 10.1.0.72:6448" -j KUBE-SEP-RGQQWGB2WG3ZBIGD
-A KUBE-SVC-VJCU6USTTMCOF35P ! -s 10.1.0.0/16 -d 10.152.183.211/32 -p tcp -m comment --comment "openstack/nova-api-mysql-router-service:mysql-ro cluster IP" -m tcp --dport 6447 -j KUBE-MARK-MASQ
-A KUBE-SVC-VJCU6USTTMCOF35P -m comment --comment "openstack/nova-api-mysql-router-service:mysql-ro -> 10.1.0.2:6447" -j KUBE-SEP-UEMDLHBGWG2CP4WK
-A KUBE-SVC-VSPETNIDFFNUMMLP ! -s 10.1.0.0/16 -d 10.152.183.173/32 -p tcp -m comment --comment "openstack/placement-mysql-router:juju-6449-tcp cluster IP" -m tcp --dport 6449 -j KUBE-MARK-MASQ
-A KUBE-SVC-VSPETNIDFFNUMMLP -m comment --comment "openstack/placement-mysql-router:juju-6449-tcp -> 10.1.0.11:6449" -j KUBE-SEP-X3IMBMTXGSLNWPB5
-A KUBE-SVC-W6CZGP33LLP5NNXR ! -s 10.1.0.0/16 -d 10.152.183.132/32 -p tcp -m comment --comment "openstack/keystone:juju-5000-tcp cluster IP" -m tcp --dport 5000 -j KUBE-MARK-MASQ
-A KUBE-SVC-W6CZGP33LLP5NNXR -m comment --comment "openstack/keystone:juju-5000-tcp -> 10.1.0.83:5000" -j KUBE-SEP-2SC6BGSVF5JOHBKD
-A KUBE-SVC-W7FAHUBBL5ZDPENZ ! -s 10.1.0.0/16 -d 10.152.183.210/32 -p tcp -m comment --comment "openstack/cinder:juju-8776-tcp cluster IP" -m tcp --dport 8776 -j KUBE-MARK-MASQ
-A KUBE-SVC-W7FAHUBBL5ZDPENZ -m comment --comment "openstack/cinder:juju-8776-tcp -> 10.1.0.204:8776" -j KUBE-SEP-IF7FHM2KI3KQTIWQ
-A KUBE-SVC-WWJGWTRY3BPQWFPG ! -s 10.1.0.0/16 -d 10.152.183.145/32 -p tcp -m comment --comment "openstack/nova-api-mysql-router:juju-6446-tcp cluster IP" -m tcp --dport 6446 -j KUBE-MARK-MASQ
-A KUBE-SVC-WWJGWTRY3BPQWFPG -m comment --comment "openstack/nova-api-mysql-router:juju-6446-tcp -> 10.1.0.2:6446" -j KUBE-SEP-UFDECIK27A4P66BD
-A KUBE-SVC-X3OSFPMHGAZQ2YBE ! -s 10.1.0.0/16 -d 10.152.183.49/32 -p tcp -m comment --comment "openstack/neutron-mysql-router:juju-6446-tcp cluster IP" -m tcp --dport 6446 -j KUBE-MARK-MASQ
-A KUBE-SVC-X3OSFPMHGAZQ2YBE -m comment --comment "openstack/neutron-mysql-router:juju-6446-tcp -> 10.1.0.23:6446" -j KUBE-SEP-X4TWTRR3AZXA7XTQ
-A KUBE-SVC-XCH4QPFYCNPMWMXP ! -s 10.1.0.0/16 -d 10.152.183.222/32 -p tcp -m comment --comment "openstack/nova-cell-mysql-router-service:mysql-ro cluster IP" -m tcp --dport 6447 -j KUBE-MARK-MASQ
-A KUBE-SVC-XCH4QPFYCNPMWMXP -m comment --comment "openstack/nova-cell-mysql-router-service:mysql-ro -> 10.1.0.190:6447" -j KUBE-SEP-EXCUFREH2C7GAT2J
-A KUBE-SVC-XHHZHCOSUHOWDZQT ! -s 10.1.0.0/16 -d 10.152.183.151/32 -p tcp -m comment --comment "openstack/nova-cell-mysql-router:juju-6447-tcp cluster IP" -m tcp --dport 6447 -j KUBE-MARK-MASQ
-A KUBE-SVC-XHHZHCOSUHOWDZQT -m comment --comment "openstack/nova-cell-mysql-router:juju-6447-tcp -> 10.1.0.190:6447" -j KUBE-SEP-2OFW2GHOBYXNS6VZ
-A KUBE-SVC-XHOWG2P2MJQGSNKR ! -s 10.1.0.0/16 -d 10.152.183.214/32 -p tcp -m comment --comment "openstack/glance-mysql-router-service:mysql-rw cluster IP" -m tcp --dport 6446 -j KUBE-MARK-MASQ
-A KUBE-SVC-XHOWG2P2MJQGSNKR -m comment --comment "openstack/glance-mysql-router-service:mysql-rw -> 10.1.0.87:6446" -j KUBE-SEP-6A5LWEYXU2QKV4OB
-A KUBE-SVC-XXMU3DECOG5ENS45 ! -s 10.1.0.0/16 -d 10.152.183.148/32 -p tcp -m comment --comment "openstack/neutron:juju-9696-tcp cluster IP" -m tcp --dport 9696 -j KUBE-MARK-MASQ
-A KUBE-SVC-XXMU3DECOG5ENS45 -m comment --comment "openstack/neutron:juju-9696-tcp -> 10.1.0.15:9696" -j KUBE-SEP-YZQAWCQ6PRHSOG2R
-A KUBE-SVC-Z4ANX4WAEWEBLCTM ! -s 10.1.0.0/16 -d 10.152.183.156/32 -p tcp -m comment --comment "kube-system/metrics-server:https cluster IP" -m tcp --dport 443 -j KUBE-MARK-MASQ
-A KUBE-SVC-Z4ANX4WAEWEBLCTM -m comment --comment "kube-system/metrics-server:https -> 10.1.0.4:10250" -j KUBE-SEP-75TMVCDBRKSIR6T3
-A KUBE-SVC-Z7Z7TFWQ7C3HKWH5 ! -s 10.1.0.0/16 -d 10.152.183.114/32 -p tcp -m comment --comment "openstack/cinder-mysql-router-service:mysql-ro cluster IP" -m tcp --dport 6447 -j KUBE-MARK-MASQ
-A KUBE-SVC-Z7Z7TFWQ7C3HKWH5 -m comment --comment "openstack/cinder-mysql-router-service:mysql-ro -> 10.1.0.74:6447" -j KUBE-SEP-3SEAFEEIKP4O4LAJ
-A KUBE-SVC-ZNSDVCZ2K3R5JXU3 ! -s 10.1.0.0/16 -d 10.152.183.235/32 -p tcp -m comment --comment "openstack/neutron-mysql-router-service:mysql-rw cluster IP" -m tcp --dport 6446 -j KUBE-MARK-MASQ
-A KUBE-SVC-ZNSDVCZ2K3R5JXU3 -m comment --comment "openstack/neutron-mysql-router-service:mysql-rw -> 10.1.0.23:6446" -j KUBE-SEP-UYVRZEQ5KTEQ3ONY
-A KUBE-SVC-ZZM3V76CVXV5HBWS ! -s 10.1.0.0/16 -d 10.152.183.173/32 -p tcp -m comment --comment "openstack/placement-mysql-router:juju-6448-tcp cluster IP" -m tcp --dport 6448 -j KUBE-MARK-MASQ
-A KUBE-SVC-ZZM3V76CVXV5HBWS -m comment --comment "openstack/placement-mysql-router:juju-6448-tcp -> 10.1.0.11:6448" -j KUBE-SEP-A6QVXX3URX7CNMRS
-A KUBE-SVL-NZTS37XDTDNXGCKJ ! -s 10.1.0.0/16 -d 10.152.183.85/32 -p tcp -m comment --comment "kube-system/hubble-peer:peer-service cluster IP" -m tcp --dport 443 -j KUBE-MARK-MASQ
-A KUBE-SVL-NZTS37XDTDNXGCKJ -m comment --comment "kube-system/hubble-peer:peer-service -> 172.24.188.57:4244" -j KUBE-SEP-D5L6GTH3N5F4PQCH
COMMIT
# Completed on Tue May 20 17:02:14 2025
# Generated by iptables-save v1.8.6 on Tue May 20 17:02:14 2025
*filter
:INPUT ACCEPT [443199:1464521016]
:FORWARD ACCEPT [1:76]
:OUTPUT ACCEPT [456796:1540547815]
:CILIUM_FORWARD - [0:0]
:CILIUM_INPUT - [0:0]
:CILIUM_OUTPUT - [0:0]
:KUBE-EXTERNAL-SERVICES - [0:0]
:KUBE-FIREWALL - [0:0]
:KUBE-FORWARD - [0:0]
:KUBE-KUBELET-CANARY - [0:0]
:KUBE-NODEPORTS - [0:0]
:KUBE-PROXY-CANARY - [0:0]
:KUBE-PROXY-FIREWALL - [0:0]
:KUBE-SERVICES - [0:0]
-A INPUT -m comment --comment "cilium-feeder: CILIUM_INPUT" -j CILIUM_INPUT
-A INPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes load balancer firewall" -j KUBE-PROXY-FIREWALL
-A INPUT -m comment --comment "kubernetes health check service ports" -j KUBE-NODEPORTS
-A INPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes externally-visible service portals" -j KUBE-EXTERNAL-SERVICES
-A INPUT -j KUBE-FIREWALL
-A FORWARD -m comment --comment "cilium-feeder: CILIUM_FORWARD" -j CILIUM_FORWARD
-A FORWARD -m conntrack --ctstate NEW -m comment --comment "kubernetes load balancer firewall" -j KUBE-PROXY-FIREWALL
-A FORWARD -m comment --comment "kubernetes forwarding rules" -j KUBE-FORWARD
-A FORWARD -m conntrack --ctstate NEW -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A FORWARD -m conntrack --ctstate NEW -m comment --comment "kubernetes externally-visible service portals" -j KUBE-EXTERNAL-SERVICES
-A OUTPUT -m comment --comment "cilium-feeder: CILIUM_OUTPUT" -j CILIUM_OUTPUT
-A OUTPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes load balancer firewall" -j KUBE-PROXY-FIREWALL
-A OUTPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A OUTPUT -j KUBE-FIREWALL
-A CILIUM_FORWARD -o cilium_host -m comment --comment "cilium: any->cluster on cilium_host forward accept" -j ACCEPT
-A CILIUM_FORWARD -i cilium_host -m comment --comment "cilium: cluster->any on cilium_host forward accept (nodeport)" -j ACCEPT
-A CILIUM_FORWARD -i lxc+ -m comment --comment "cilium: cluster->any on lxc+ forward accept" -j ACCEPT
-A CILIUM_FORWARD -i cilium_net -m comment --comment "cilium: cluster->any on cilium_net forward accept (nodeport)" -j ACCEPT
-A CILIUM_INPUT -m mark --mark 0x200/0xf00 -m comment --comment "cilium: ACCEPT for proxy traffic" -j ACCEPT
-A CILIUM_OUTPUT -m mark --mark 0xa00/0xe00 -m comment --comment "cilium: ACCEPT for proxy traffic" -j ACCEPT
-A CILIUM_OUTPUT -m mark --mark 0x800/0xe00 -m comment --comment "cilium: ACCEPT for l7 proxy upstream traffic" -j ACCEPT
-A CILIUM_OUTPUT -m mark ! --mark 0xe00/0xf00 -m mark ! --mark 0xd00/0xf00 -m mark ! --mark 0x400/0xf00 -m mark ! --mark 0xa00/0xe00 -m mark ! --mark 0x800/0xe00 -m mark ! --mark 0xf00/0xf00 -m comment --comment "cilium: host->any mark as from host" -j MARK --set-xmark 0xc00/0xf00
-A KUBE-FIREWALL ! -s 127.0.0.0/8 -d 127.0.0.0/8 -m comment --comment "block incoming localnet connections" -m conntrack ! --ctstate RELATED,ESTABLISHED,DNAT -j DROP
-A KUBE-FORWARD -m conntrack --ctstate INVALID -m nfacct --nfacct-name  ct_state_invalid_dropped_pkts -j DROP
-A KUBE-FORWARD -m comment --comment "kubernetes forwarding rules" -m mark --mark 0x4000/0x4000 -j ACCEPT
-A KUBE-FORWARD -m comment --comment "kubernetes forwarding conntrack rule" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A KUBE-SERVICES -d 10.152.183.108/32 -p tcp -m comment --comment "openstack/mysql-replicas has no endpoints" -m tcp --dport 3306 -j REJECT --reject-with icmp-port-unreachable
COMMIT
# Completed on Tue May 20 17:02:14 2025
# Generated by iptables-save v1.8.6 on Tue May 20 17:02:14 2025
*mangle
:PREROUTING ACCEPT [148506463:566314724229]
:INPUT ACCEPT [147862941:565656735345]
:FORWARD ACCEPT [641010:657256918]
:OUTPUT ACCEPT [151542591:587436206022]
:POSTROUTING ACCEPT [152190551:588093797506]
:CILIUM_POST_mangle - [0:0]
:CILIUM_PRE_mangle - [0:0]
:KUBE-IPTABLES-HINT - [0:0]
:KUBE-KUBELET-CANARY - [0:0]
:KUBE-PROXY-CANARY - [0:0]
-A PREROUTING -m comment --comment "cilium-feeder: CILIUM_PRE_mangle" -j CILIUM_PRE_mangle
-A POSTROUTING -m comment --comment "cilium-feeder: CILIUM_POST_mangle" -j CILIUM_POST_mangle
-A CILIUM_PRE_mangle ! -o lo -m socket --transparent -m mark ! --mark 0xe00/0xf00 -m mark ! --mark 0x800/0xf00 -m comment --comment "cilium: any->pod redirect proxied traffic to host proxy" -j MARK --set-xmark 0x200/0xffffffff
-A CILIUM_PRE_mangle -p tcp -m mark --mark 0xa58b0200 -m comment --comment "cilium: TPROXY to host cilium-dns-egress proxy" -j TPROXY --on-port 35749 --on-ip 127.0.0.1 --tproxy-mark 0x200/0xffffffff
-A CILIUM_PRE_mangle -p udp -m mark --mark 0xa58b0200 -m comment --comment "cilium: TPROXY to host cilium-dns-egress proxy" -j TPROXY --on-port 35749 --on-ip 127.0.0.1 --tproxy-mark 0x200/0xffffffff
COMMIT
# Completed on Tue May 20 17:02:14 2025
